Add collated code

--- a/collated/main/A0139399J.md
+++ b/collated/main/A0139399J.md
@@ -11,7 +11,9 @@ import seedu.doit.model.item.UniqueTaskList;
 
 public class MarkCommand extends Command {
     public static final String COMMAND_WORD = "mark";
-
+    public static final String COMMAND_PARAMETER = "INDEX";
+    public static final String COMMAND_RESULT = "Marks task at specified index as completed";
+    public static final String COMMAND_EXAMPLE = "mark 20";
     public static final String MESSAGE_USAGE = COMMAND_WORD
         + ": Marks the task identified by the index number used in the last task list as completed.\n"
         + "Parameters: INDEX (must be a positive integer)\n"
@@ -30,13 +32,13 @@ public class MarkCommand extends Command {
     @Override
     public CommandResult execute() throws CommandException {
 
-        UnmodifiableObservableList<ReadOnlyTask> lastShownTaskList = model.getFilteredTaskList();
+        UnmodifiableObservableList<ReadOnlyTask> lastShownTaskList = this.model.getFilteredTaskList();
 
-        if (filteredTaskListIndex <= lastShownTaskList.size()) {
-            ReadOnlyTask taskToMark = lastShownTaskList.get(filteredTaskListIndex - 1);
+        if (this.filteredTaskListIndex <= lastShownTaskList.size()) {
+            ReadOnlyTask taskToMark = lastShownTaskList.get(this.filteredTaskListIndex - 1);
 
             try {
-                model.markTask(filteredTaskListIndex - 1, taskToMark);
+                this.model.markTask(this.filteredTaskListIndex - 1, taskToMark);
             } catch (UniqueTaskList.TaskNotFoundException pnfe) {
                 assert false : "The target task cannot be missing";
             } catch (UniqueTaskList.DuplicateTaskException dpe) {
@@ -47,6 +49,22 @@ public class MarkCommand extends Command {
         } else {
             throw new CommandException(Messages.MESSAGE_INVALID_TASK_DISPLAYED_INDEX);
         }
+    }
+
+    public static String getName() {
+        return COMMAND_WORD;
+    }
+
+    public static String getParameter() {
+        return COMMAND_PARAMETER;
+    }
+
+    public static String getResult() {
+        return COMMAND_RESULT;
+    }
+
+    public static String getExample() {
+        return COMMAND_EXAMPLE;
     }
 }
 ```
@@ -64,6 +82,9 @@ import seedu.doit.model.item.UniqueTaskList;
 
 public class UnmarkCommand extends Command {
     public static final String COMMAND_WORD = "unmark";
+    public static final String COMMAND_PARAMETER = "INDEX";
+    public static final String COMMAND_RESULT = "Marks task at specified index as uncompleted";
+    public static final String COMMAND_EXAMPLE = "unmark 6";
 
     public static final String MESSAGE_USAGE = COMMAND_WORD
         + ": Changes the task identified by the index number used in the last task list to uncompleted.\n"
@@ -101,6 +122,22 @@ public class UnmarkCommand extends Command {
         } else {
             throw new CommandException(Messages.MESSAGE_INVALID_TASK_DISPLAYED_INDEX);
         }
+    }
+
+    public static String getName() {
+        return COMMAND_WORD;
+    }
+
+    public static String getParameter() {
+        return COMMAND_PARAMETER;
+    }
+
+    public static String getResult() {
+        return COMMAND_RESULT;
+    }
+
+    public static String getExample() {
+        return COMMAND_EXAMPLE;
     }
 }
 ```
@@ -489,12 +526,12 @@ import seedu.doit.logic.parser.DateTimeParser;
  * Represents a Item's end time in the item manager. Guarantees: immutable; is
  * valid as declared in {@link #isValidEndTime(String)}
  */
-public class EndTime  implements Comparable<EndTime> {
+public class EndTime implements Comparable<EndTime> {
 
-    public static final String NO_END_TIME = null;
-    public static final String MESSAGE_ENDTIME_CONSTRAINTS = "Item End Time should be in "
-        + "MM-DD-YY HH:MM Format or relative date today, tomorrow, next wednesday";
-    public static final String ENDTIME_VALIDATION_REGEX = "^([0-9]||0[0-9]||1[0-2])/([0-2][0-9]||3[0-1])"
+    public static final String NO_END_TIME = "";
+    public static final String MESSAGE_ENDTIME_CONSTRAINTS = "End Date/Time should be in "
+        + "DD/MM/YY HH:MM Format or relative date today, tomorrow, next wednesday";
+    public static final String ENDTIME_VALIDATION_REGEX = "^$|^([0-2][0-9]||3[0-1]$)/([0-9]||0[0-9]||1[0-2])"
         + "/([0-9][0-9])?[0-9][0-9] [0-2]\\d:[0-6]\\d$";
 
     public final String value;
@@ -515,7 +552,7 @@ public class EndTime  implements Comparable<EndTime> {
      * @throws IllegalValueException if given endTime string is invalid.
      */
     public EndTime(String endTime) throws IllegalValueException {
-        if (endTime == NO_END_TIME) {
+        if (endTime.equals(NO_END_TIME)) {
             this.value = NO_END_TIME;
             this.dateObject = null;
         } else {
@@ -541,7 +578,7 @@ public class EndTime  implements Comparable<EndTime> {
     }
 
     private static String formatDate(LocalDateTime input) {
-        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("MM/dd/yy HH:mm");
+        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("dd/MM/yy HH:mm");
         return input.format(formatter);
     }
 
@@ -740,67 +777,6 @@ public interface ReadOnlyTask {
             && (other.getIsDone() == this.getIsDone()));
     }
 
-    /**
-     * Formats the event as text, showing all details.
-     */
-    default String getAsText() {
-        final StringBuilder builder = new StringBuilder();;
-
-        appendName(builder);
-        appendPriority(builder);
-        appendStartTime(builder);
-        appendEndTime(builder);
-        appendDescription(builder);
-        appendTags(builder);
-
-        return builder.toString();
-    }
-
-    default void appendName(StringBuilder builder) {
-        builder.append(getName());
-    }
-
-    default void appendPriority(StringBuilder builder) {
-        builder.append(" Priority: ");
-        builder.append(getPriority());
-    }
-
-    default void appendStartTime(StringBuilder builder) {
-        if (hasStartTime()) {
-            builder.append(" Start Time: ");
-            builder.append(getStartTime());
-        }
-    }
-
-    default void appendEndTime(StringBuilder builder) {
-        if (hasEndTime()) {
-            builder.append(" End Time: ");
-            builder.append(getDeadline());
-        }
-    }
-
-    default void appendDescription(StringBuilder builder) {
-        builder.append(" Description: ");
-        builder.append(getDescription());
-    }
-
-    default void appendTags(StringBuilder builder) {
-        builder.append(" Tags: ");
-        getTags().forEach(builder::append);
-    }
-
-    boolean hasStartTime();
-
-    boolean hasEndTime();
-
-    int getItemType();
-
-    boolean isTask();
-
-    boolean isEvent();
-
-    boolean isFloatingTask();
-}
 ```
 ###### /java/seedu/doit/model/item/StartTime.java
 ``` java
@@ -818,10 +794,10 @@ import seedu.doit.logic.parser.DateTimeParser;
  */
 public class StartTime implements Comparable<StartTime> {
 
-    public static final String NO_START_TIME = null;
-    public static final String MESSAGE_STARTTIME_CONSTRAINTS = "Item Start Time should be in "
-        + "MM-DD-YY HH:MM Format or relative date today, tomorrow, next wednesday";
-    public static final String STARTTIME_VALIDATION_REGEX = "^([0-9]||0[0-9]||1[0-2])/([0-2][0-9]||3[0-1])"
+    public static final String NO_START_TIME = "";
+    public static final String MESSAGE_STARTTIME_CONSTRAINTS = "Start Date/Time should be in "
+        + "DD/MM/YY HH:MM Format or relative date today, tomorrow, next wednesday";
+    public static final String STARTTIME_VALIDATION_REGEX = "^$|^([0-2][0-9]||3[0-1])/([0-9]||0[0-9]||1[0-2])"
         + "/([0-9][0-9])?[0-9][0-9] [0-2]\\d:[0-6]\\d$";
 
     public final String value;
@@ -841,7 +817,7 @@ public class StartTime implements Comparable<StartTime> {
      * @throws IllegalValueException if given startTime string is invalid.
      */
     public StartTime(String startTime) throws IllegalValueException {
-        if (startTime == NO_START_TIME) {
+        if (startTime.equals(NO_START_TIME)) {
             this.value = NO_START_TIME;
             this.dateObject = null;
         } else {
@@ -868,7 +844,7 @@ public class StartTime implements Comparable<StartTime> {
     }
 
     private static String formatDate(LocalDateTime input) {
-        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("MM/dd/yy HH:mm");
+        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("dd/MM/yy HH:mm");
         return input.format(formatter);
 
     }
@@ -1055,7 +1031,7 @@ public class Task implements ReadOnlyTask {
     public boolean hasStartTime() {
         if (this.startTime == null) {
             return false;
-        } else if (this.startTime.value == null) {
+        } else if (this.startTime.value.equals("")) {
             return false;
         }
         return true;
@@ -1065,7 +1041,7 @@ public class Task implements ReadOnlyTask {
     public boolean hasEndTime() {
         if (this.endTime == null) {
             return false;
-        } else if (this.endTime.value == null) {
+        } else if (this.endTime.value.equals("")) {
             return false;
         }
         return true;
@@ -1088,7 +1064,7 @@ public class Task implements ReadOnlyTask {
      */
     @Override
     public boolean isEvent() {
-        return (hasStartTime() && hasEndTime());
+        return (hasStartTime());
     }
 
     /**
@@ -1169,6 +1145,7 @@ package seedu.doit.model.item;
 import java.util.Comparator;
 import java.util.Iterator;
 import java.util.List;
+import java.util.Set;
 
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
@@ -1228,9 +1205,6 @@ public class UniqueTaskList implements Iterable<Task> {
         }
 
         taskToUpdate.resetData(editedTask);
-        // TODO: The code below is just a workaround to notify observers of the updated task.
-        // The right way is to implement observable properties in the Task class.
-        // Then, TaskCard should then bind its text labels to those observable properties.
         internalList.set(index, taskToUpdate);
         internalList.sort(taskComparator);
     }
@@ -1268,12 +1242,21 @@ public class UniqueTaskList implements Iterable<Task> {
      *
      * @throws TaskNotFoundException if no such task could be found in the list.
      */
-    public boolean remove(ReadOnlyTask toRemove) throws TaskNotFoundException {
+    public boolean remove(ReadOnlyTask toRemove) {
         assert toRemove != null;
         final boolean taskFoundAndDeleted = internalList.remove(toRemove);
-        if (!taskFoundAndDeleted) {
-            throw new TaskNotFoundException();
-        }
+        internalList.sort(taskComparator);
+        return taskFoundAndDeleted;
+    }
+
+    /**
+     * Removes the equivalent tasks from the list.
+     *
+     * @throws TaskNotFoundException if no such task could be found in the list.
+     */
+    public boolean remove(Set<ReadOnlyTask> tasksToRemove) {
+        assert tasksToRemove != null;
+        final boolean taskFoundAndDeleted = internalList.removeAll(tasksToRemove);
         internalList.sort(taskComparator);
         return taskFoundAndDeleted;
     }
@@ -1291,6 +1274,10 @@ public class UniqueTaskList implements Iterable<Task> {
         setTasks(replacement);
     }
 
+
+    /**
+     * Sets the comparator by which tasks from the list will be sorted by.
+     */
     public void setTaskComparator(Comparator<ReadOnlyTask> taskComparator) {
         this.taskComparator = taskComparator;
         internalList.sort(taskComparator);
@@ -1359,22 +1346,17 @@ public interface Model {
     /**
      * Clears existing backing model and replaces with the provided new data.
      */
-    void resetData(ReadOnlyItemManager newData);
+    void resetData(ReadOnlyTaskManager newData);
 
     /**
      * Returns the TaskManager
      */
-    ReadOnlyItemManager getTaskManager();
+    ReadOnlyTaskManager getTaskManager();
 
     /**
      * Deletes the given task.
      */
-    void deleteTask(ReadOnlyTask target) throws UniqueTaskList.TaskNotFoundException;
-
-    /**
-     * Deletes the given task.
-     */
-    void deleteTasks(Set<ReadOnlyTask> targets) throws UniqueTaskList.TaskNotFoundException;
+    void deleteTasks(Set<ReadOnlyTask> targets);
 
     /**
      * Adds the given task
@@ -1486,7 +1468,7 @@ public class ModelManager extends ComponentManager implements Model {
     /**
      * Initializes a ModelManager with the given taskManager and userPrefs.
      */
-    public ModelManager(ReadOnlyItemManager taskManager, UserPrefs userPrefs) {
+    public ModelManager(ReadOnlyTaskManager taskManager, UserPrefs userPrefs) {
         super();
         assert !CollectionUtil.isAnyNull(taskManager, userPrefs);
 
@@ -1506,18 +1488,18 @@ public class ModelManager extends ComponentManager implements Model {
     }
 
     @Override
-    public void resetData(ReadOnlyItemManager newData) {
+    public void resetData(ReadOnlyTaskManager newData) {
         this.taskManager.resetData(newData);
         indicateTaskManagerChanged();
     }
 
     @Override
-    public void resetDataWithoutSaving(ReadOnlyItemManager newData) {
+    public void resetDataWithoutSaving(ReadOnlyTaskManager newData) {
         this.taskManager.resetData(newData);
     }
 
     @Override
-    public void loadData(ReadOnlyItemManager newData) {
+    public void loadData(ReadOnlyTaskManager newData) {
         this.resetDataWithoutSaving(newData);
         taskManagerStack.clearRedoStack();
         taskManagerStack.clearUndoStack();
@@ -1527,7 +1509,7 @@ public class ModelManager extends ComponentManager implements Model {
 ###### /java/seedu/doit/model/ModelManager.java
 ``` java
     @Override
-    public ReadOnlyItemManager getTaskManager() {
+    public ReadOnlyTaskManager getTaskManager() {
         return this.taskManager;
     }
 
@@ -1538,29 +1520,28 @@ public class ModelManager extends ComponentManager implements Model {
         raise(new TaskManagerChangedEvent(this.taskManager));
     }
 
+    /**
+     * Removes the equivalent task from the task list.
+     *
+     * @throws TaskNotFoundException
+     *             if no such task could be found in the task list.
+     */
     @Override
-    public synchronized void deleteTask(ReadOnlyTask target) throws TaskNotFoundException {
-        logger.info("delete task in model manager");
-        taskManagerStack.addToUndoStack(this.getTaskManager());
-        taskManagerStack.clearRedoStack();
-        this.taskManager.removeTask(target);
-        updateFilteredListToShowAll();
-        indicateTaskManagerChanged();
-
-    }
-
-    @Override
-    public synchronized void deleteTasks(Set<ReadOnlyTask> targets) throws TaskNotFoundException {
+    public synchronized void deleteTasks(Set<ReadOnlyTask> targets) {
         logger.info("delete task(s) in model manager");
         taskManagerStack.addToUndoStack(this.getTaskManager());
         taskManagerStack.clearRedoStack();
-        for (ReadOnlyTask target: targets) {
-            this.taskManager.removeTask(target);
-        }
+        this.taskManager.removeTask(targets);
         updateFilteredListToShowAll();
         indicateTaskManagerChanged();
     }
 
+    /**
+     * Removes the equivalent tasks from the task list.
+     *
+     * @throws TaskNotFoundException
+     *             if a task could be found in the task list.
+     */
     @Override
     public synchronized void addTask(Task task) throws DuplicateTaskException {
         logger.info("add task in model manager");
@@ -1904,7 +1885,7 @@ public class    TagPredicate implements Predicate<ReadOnlyTask> {
     }
 }
 ```
-###### /java/seedu/doit/model/ReadOnlyItemManager.java
+###### /java/seedu/doit/model/ReadOnlyTaskManager.java
 ``` java
 package seedu.doit.model;
 
@@ -1915,7 +1896,7 @@ import seedu.doit.model.tag.Tag;
 /**
  * Unmodifiable view of an task manager
  */
-public interface ReadOnlyItemManager {
+public interface ReadOnlyTaskManager {
 
     /**
      * Returns an unmodifiable view of the task s list.
@@ -2198,10 +2179,10 @@ import seedu.doit.model.tag.UniqueTagList;
  * Wraps all data at the task manager level
  * Duplicates are not allowed (by .equals comparison)
  */
-public class TaskManager implements ReadOnlyItemManager {
+public class TaskManager implements ReadOnlyTaskManager {
 
-    private final UniqueTaskList tasks;
-    private final UniqueTagList tags;
+    private final UniqueTaskList taskList;
+    private final UniqueTagList tagList;
 
     /*
      * The 'unusual' code block below is an non-static initialization block, sometimes used to avoid duplication
@@ -2210,8 +2191,8 @@ public class TaskManager implements ReadOnlyItemManager {
      * Note that non-static init blocks are not recommended to use. There are other ways to avoid duplication
      *   among constructors.
      */ {
-        tasks = new UniqueTaskList();
-        tags = new UniqueTagList();
+        taskList = new UniqueTaskList();
+        tagList = new UniqueTagList();
     }
 
     public TaskManager() {
@@ -2220,7 +2201,7 @@ public class TaskManager implements ReadOnlyItemManager {
     /**
      * Creates an TaskManager using the Tasks and Tags in the {@code toBeCopied}
      */
-    public TaskManager(ReadOnlyItemManager toBeCopied) {
+    public TaskManager(ReadOnlyTaskManager toBeCopied) {
         this();
         resetData(toBeCopied);
     }
@@ -2229,49 +2210,49 @@ public class TaskManager implements ReadOnlyItemManager {
 
     public void setTasks(List<? extends ReadOnlyTask> tasks)
         throws UniqueTaskList.DuplicateTaskException {
-        this.tasks.setTasks(tasks);
+        this.taskList.setTasks(tasks);
     }
 
     public void setTags(Collection<Tag> tags) throws UniqueTagList.DuplicateTagException {
-        this.tags.setTags(tags);
+        this.tagList.setTags(tags);
     }
 
-    public void resetData(ReadOnlyItemManager newData) {
+    public void resetData(ReadOnlyTaskManager newData) {
         assert newData != null;
         try {
             setTasks(newData.getTaskList());
         } catch (UniqueTaskList.DuplicateTaskException e) {
-            assert false : "Task Manager should not have duplicate tasks";
+            assert false : "Task Manager should not have duplicate taskList";
         }
         try {
             setTags(newData.getTagList());
         } catch (UniqueTagList.DuplicateTagException e) {
-            assert false : "Task Manager should not have duplicate tags";
+            assert false : "Task Manager should not have duplicate tagList";
         }
-        syncMasterTagListWith(tasks);
+        syncMasterTagListWith(taskList);
     }
 
     public void setTaskComparator(Comparator<ReadOnlyTask> taskComparator) {
-        tasks.setTaskComparator(taskComparator);
+        taskList.setTaskComparator(taskComparator);
     }
 
 //// task-level operations
 
     /**
      * Adds a task to the task manager.
-     * Also checks the new task's tags and updates {@link #tags} with any new tags found,
-     * and updates the Tag objects in the task to point to those in {@link #tags}.
+     * Also checks the new task's tagList and updates {@link #tagList} with any new tagList found,
+     * and updates the Tag objects in the task to point to those in {@link #tagList}.
      *
      * @throws UniqueTaskList.DuplicateTaskException if an equivalent task already exists.
      */
     public void addTask(Task p) throws UniqueTaskList.DuplicateTaskException {
         syncMasterTagListWith(p);
-        tasks.add(p);
+        taskList.add(p);
     }
 
     /**
      * Updates the task in the list at position {@code index} with {@code editedReadOnlyTask}.
-     * {@code TaskManager}'s tag list will be updated with the tags of {@code editedReadOnlyTask}.
+     * {@code TaskManager}'s tag list will be updated with the tagList of {@code editedReadOnlyTask}.
      *
      * @throws DuplicateTaskException    if updating the task's details causes the task to be equivalent to
      *                                   another existing task in the list.
@@ -2284,10 +2265,10 @@ public class TaskManager implements ReadOnlyItemManager {
 
         Task editedTask = new Task(editedReadOnlyTask);
         syncMasterTagListWith(editedTask);
-        // TODO: the tags master list will be updated even though the below line fails.
-        // This can cause the tags master list to have additional tags that are not tagged to any task
+        // TODO: the tagList master list will be updated even though the below line fails.
+        // This can cause the tagList master list to have additional tagList that are not tagged to any task
         // in the task list.
-        tasks.updateTask(index, editedTask);
+        taskList.updateTask(index, editedTask);
     }
 
     /**
@@ -2298,7 +2279,7 @@ public class TaskManager implements ReadOnlyItemManager {
      */
     public void markTask(int taskIndex, ReadOnlyTask taskToDone)
             throws UniqueTaskList.TaskNotFoundException, DuplicateTaskException {
-        tasks.mark(taskIndex, taskToDone);
+        taskList.mark(taskIndex, taskToDone);
     }
 
 
@@ -2310,32 +2291,32 @@ public class TaskManager implements ReadOnlyItemManager {
      */
     public void unmarkTask(int taskIndex, ReadOnlyTask taskToDone)
             throws UniqueTaskList.TaskNotFoundException, DuplicateTaskException {
-        tasks.unmark(taskIndex, taskToDone);
+        taskList.unmark(taskIndex, taskToDone);
     }
 
     /**
      * Ensures that every tag in this task:
-     * - exists in the master list {@link #tags}
+     * - exists in the master list {@link #tagList}
      * - points to a Tag object in the master list
      */
     private void syncMasterTagListWith(Task task) {
         final UniqueTagList taskTags = task.getTags();
-        tags.mergeFrom(taskTags);
+        tagList.mergeFrom(taskTags);
 
         // Create map with values = tag object references in the master list
         // used for checking task tag references
         final Map<Tag, Tag> masterTagObjects = new HashMap<>();
-        tags.forEach(tag -> masterTagObjects.put(tag, tag));
+        tagList.forEach(tag -> masterTagObjects.put(tag, tag));
 
-        // Rebuild the list of task tags to point to the relevant tags in the master tag list.
+        // Rebuild the list of task tagList to point to the relevant tagList in the master tag list.
         final Set<Tag> correctTagReferences = new HashSet<>();
         taskTags.forEach(tag -> correctTagReferences.add(masterTagObjects.get(tag)));
         task.setTags(new UniqueTagList(correctTagReferences));
     }
 
     /**
-     * Ensures that every tag in these tasks:
-     * - exists in the master list {@link #tags}
+     * Ensures that every tag in these taskList:
+     * - exists in the master list {@link #tagList}
      * - points to a Tag object in the master list
      *
      * @see #syncMasterTagListWith(Task)
@@ -2344,50 +2325,58 @@ public class TaskManager implements ReadOnlyItemManager {
         tasks.forEach(this::syncMasterTagListWith);
     }
 
-    public boolean removeTask(ReadOnlyTask key) throws TaskNotFoundException {
-        if (tasks.remove(key)) {
-            return true;
-        } else {
-            throw new UniqueTaskList.TaskNotFoundException();
-        }
+    /**
+     * Removes the equivalent task from the UniqueTaskList.
+     *
+     */
+    public void removeTask(ReadOnlyTask task) {
+        taskList.remove(task);
     }
 
-//// tag-level operations
+    /**
+     * Removes the equivalent taskList from the UniqueTaskList.
+     *
+     */
+    public void removeTask(Set<ReadOnlyTask> tasks) {
+        taskList.remove(tasks);
+    }
+
+    //// tag-level operations
 
     public void addTag(Tag t) throws UniqueTagList.DuplicateTagException {
-        tags.add(t);
+        tagList.add(t);
     }
 
 //// util methods
 
     @Override
     public String toString() {
-        return tasks.asObservableList().size() + " tasks, " + tags.asObservableList().size() + " tags";
+        return taskList.asObservableList().size() + " taskList, " + tagList.asObservableList().size() + " tagList";
         // TODO: refine later
     }
 
     @Override
     public ObservableList<ReadOnlyTask> getTaskList() {
-        return new UnmodifiableObservableList<>(tasks.asObservableList());
+        return new UnmodifiableObservableList<>(taskList.asObservableList());
     }
 
     @Override
     public ObservableList<Tag> getTagList() {
-        return new UnmodifiableObservableList<>(tags.asObservableList());
+        return new UnmodifiableObservableList<>(tagList.asObservableList());
     }
 
     @Override
     public boolean equals(Object other) {
         return other == this // short circuit if same object
             || (other instanceof TaskManager // instanceof handles nulls
-            && this.tasks.equals(((TaskManager) other).tasks)
-            && this.tags.equalsOrderInsensitive(((TaskManager) other).tags));
+            && this.taskList.equals(((TaskManager) other).taskList)
+            && this.tagList.equalsOrderInsensitive(((TaskManager) other).tagList));
     }
 
     @Override
     public int hashCode() {
         // use this method for custom fields hashing instead of implementing your own
-        return Objects.hash(tasks, tags);
+        return Objects.hash(taskList, tagList);
     }
 }
 ```
@@ -2439,22 +2428,23 @@ import seedu.doit.model.tag.UniqueTagList;
 public class SampleDataUtil {
     public static Task[] getSampleTasks() {
         try {
-            return new Task[] { new Task(new Name("Refactor"), new Priority("low"), new EndTime("today"),
+            return new Task[] {
+                new Task(new Name("Refactor"), new Priority("low"), new EndTime("04/04/14"),
                     new Description("Refactor all mentions of task / taskManager"),
                     new UniqueTagList("Huanhui")),
-                new Task(new Name("pass Travis"), new Priority("med"), new EndTime("today"),
+                new Task(new Name("pass Travis"), new Priority("med"), new EndTime("04/04/14"),
                     new Description("Remove trailing whitespaces in md files for Travis to pass"),
                     new UniqueTagList("keanwai", "z")),
-                new Task(new Name("help"), new Priority("high"), new EndTime("today"),
+                new Task(new Name("help"), new Priority("high"), new EndTime("04/04/14"),
                     new Description("Update help command"),
                     new UniqueTagList("ChiaSin")),
-                new Task(new Name("merge"), new Priority("med"), new EndTime("today"),
+                new Task(new Name("merge"), new Priority("med"), new EndTime("04/04/14"),
                     new Description("Fix the master branch merge conflicts"),
                     new UniqueTagList("JinShun")),
-                new Task(new Name("help botton"), new Priority("high"), new EndTime("next week"),
+                new Task(new Name("help botton"), new Priority("high"), new EndTime("04/04/14"),
                     new Description("Update Help button to our user guide"),
                     new UniqueTagList("ChiaSin")),
-                new Task(new Name("UI interface"), new Priority("low"), new EndTime("next week"),
+                new Task(new Name("UI interface"), new Priority("low"), new EndTime("04/04/14"),
                     new Description("have 3 lists"),
                     new UniqueTagList("Huanhui")),
             };
@@ -2463,7 +2453,7 @@ public class SampleDataUtil {
         }
     }
 
-    public static ReadOnlyItemManager getSampleTaskManager() {
+    public static ReadOnlyTaskManager getSampleTaskManager() {
         try {
             TaskManager sampleAB = new TaskManager();
             for (Task sampleTask : getSampleTasks()) {
