--- a/collated/main/A0146809W.md
+++ b/collated/main/A0146809W.md
@@ -1,46 +1,52 @@
 # A0146809W
 ###### /java/seedu/doit/logic/commands/AddCommand.java
 ``` java
+package seedu.doit.logic.commands;
+
+import java.time.LocalDateTime;
+import java.util.HashSet;
+import java.util.Set;
+
+import seedu.doit.commons.core.EventsCenter;
+import seedu.doit.commons.events.ui.JumpToListRequestEvent;
+import seedu.doit.commons.exceptions.IllegalValueException;
+import seedu.doit.logic.commands.exceptions.CommandException;
+import seedu.doit.model.item.Description;
+import seedu.doit.model.item.EndTime;
+import seedu.doit.model.item.Name;
+import seedu.doit.model.item.Priority;
+import seedu.doit.model.item.StartTime;
+import seedu.doit.model.item.Task;
+import seedu.doit.model.tag.Tag;
+import seedu.doit.model.tag.UniqueTagList;
+
 /**
  * Adds a task to the task manager.
  */
 public class AddCommand extends Command {
 
     public static final String COMMAND_WORD = "add";
-
-    public static final String MESSAGE_USAGE = COMMAND_WORD + ": Adds a task to the Task manager. "
-        + "Parameters: TASK NAME p/PRIORITY  e/END DATE  d/ADDITIONAL DESCRIPTION [t/TAG]...\n" + "Example: "
-        + COMMAND_WORD + " CS3230 Assignment1 p/high e/tomorrow 23:59 d/Prove bubble sort A t/CS3230\n"
-        + "add Hackathon p/med s/next monday 9am e/next tuesday d/create chatbot  t/hackathon\n"
-        + "add Food p/low d/for myself t/secret";
+    public static final String COMMAND_RESULT = "Adds a task to the Task manager. ";
+    public static final String COMMAND_PARAMETER = "TASK NAME p/PRIORITY  e/END DATE  d/ADDITIONAL "
+        + "DESCRIPTION [t/TAG]...";
+    public static final String COMMAND_EXAMPLE = "add finishCS3230Lab s/01-Mar-17 e/01-Mar-17 p/med t/CS3230\n"
+        + "add completeUserGuide d/28-Feb-2017 2400 p/high t/Important\n"
+        + "add reachDiamondRank p/low t/Overwatch";
+    public static final String MESSAGE_USAGE = COMMAND_WORD + ": " + COMMAND_RESULT + "Parameters: " + COMMAND_PARAMETER
+        + "\nExample: " + COMMAND_EXAMPLE;
 
     public static final String MESSAGE_SUCCESS = "New task added: %1$s";
     public static final String MESSAGE_DUPLICATE_TASK = "This task already exists in the Task Manager";
-    public static final String MESSAGE_INVALID_START_TIME = "Start Time not earlier then End Time!";
+    public static final String MESSAGE_INVALID_START_TIME = "Start Time cannot be earlier then End Time!";
 
     private final Task toAdd;
-
-    /**
-     * Creates an AddCommand using raw values for task.
-     *
-     * @throws IllegalValueException if any of the raw values are invalid
-     */
-    public AddCommand(String name, String priority, String dueDate, String text, Set<String> tags)
-        throws IllegalValueException {
-
-        final Set<Tag> tagSet = new HashSet<>();
-        for (String tagName : tags) {
-            tagSet.add(new Tag(tagName));
-        }
-        this.toAdd = new Task(new Name(name), new Priority(priority), new EndTime(dueDate), new Description(text),
-            new UniqueTagList(tagSet));
-    }
 
     /**
      * Creates an AddCommand using raw values for event.
      *
      * @throws IllegalValueException if any of the raw values are invalid
      */
+
     public AddCommand(String name, String priority, String startDate, String dueDate, String text, Set<String> tags)
         throws IllegalValueException {
 
@@ -50,26 +56,40 @@ public class AddCommand extends Command {
         }
         StartTime startTime;
         EndTime endTime;
+
+        if (startDate == null) {
+            startDate = "";
+        }
+
+        if (dueDate == null) {
+            dueDate = "";
+        }
+
         this.toAdd = new Task(new Name(name), new Priority(priority), startTime = new StartTime(startDate),
             endTime = new EndTime(dueDate), new Description(text), new UniqueTagList(tagSet));
 
-        if (!isStartTimeEarlier(startTime.getDateTimeObject(), endTime.getDateTimeObject())) {
+        if (startTime.getDateTimeObject() != null && endTime.getDateTimeObject() != null &&
+            !isStartTimeEarlier(startTime.getDateTimeObject(), endTime.getDateTimeObject())) {
             throw new IllegalValueException(MESSAGE_INVALID_START_TIME);
         }
     }
 
-    /**
-     * Creates an AddCommand using raw values for floating task.
-     *
-     * @throws IllegalValueException if any of the raw values are invalid
-     */
-    public AddCommand(String name, String priority, String text, Set<String> tags) throws IllegalValueException {
 
-        final Set<Tag> tagSet = new HashSet<>();
-        for (String tagName : tags) {
-            tagSet.add(new Tag(tagName));
-        }
-        this.toAdd = new Task(new Name(name), new Priority(priority), new Description(text), new UniqueTagList(tagSet));
+    public static String getName() {
+        return COMMAND_WORD;
+    }
+
+
+    public static String getParameter() {
+        return COMMAND_PARAMETER;
+    }
+
+    public static String getResult() {
+        return COMMAND_RESULT;
+    }
+
+    public static String getExample() {
+        return COMMAND_EXAMPLE;
     }
 
     @Override
@@ -77,8 +97,10 @@ public class AddCommand extends Command {
         assert this.model != null;
         try {
             this.model.addTask(this.toAdd);
+
             EventsCenter.getInstance().post(new JumpToListRequestEvent(
-                    this.model.getFilteredTaskList().indexOf(this.toAdd)));
+                this.model.getFilteredTaskList().indexOf(this.toAdd)));
+
             return new CommandResult(String.format(MESSAGE_SUCCESS, this.toAdd));
         } catch (Exception e) {
             throw new CommandException(MESSAGE_DUPLICATE_TASK);
@@ -98,6 +120,53 @@ public class AddCommand extends Command {
 
 }
 ```
+###### /java/seedu/doit/logic/commands/CommandResult.java
+``` java
+
+package seedu.doit.logic.commands;
+
+import java.util.ArrayList;
+import java.util.HashSet;
+import java.util.List;
+
+import seedu.doit.model.item.ReadOnlyTask;
+
+/**
+ * Represents the result of a command execution.
+ */
+public class CommandResult {
+
+    public final String feedbackToUser;
+
+    public CommandResult(String feedbackToUser) {
+        assert feedbackToUser != null;
+        this.feedbackToUser = feedbackToUser;
+    }
+
+    /**
+     * Returns a string with the task index attached to task name for every task
+     *
+     * @param tasksSet Set of tasks
+     * @return A formatted string with the task index attached to the corresponding task
+     */
+    public static String tasksToString(HashSet<ReadOnlyTask> tasksSet) {
+
+        final StringBuilder builder = new StringBuilder();
+
+        List<ReadOnlyTask> tasksList = new ArrayList<>(tasksSet);
+
+        for (int i = 0; i < tasksList.size() - 1; i++) {
+            builder.append(tasksList.get(i).getName());
+            builder.append(", ");
+        }
+
+        builder.append(tasksList.get(tasksList.size() - 1).getName());
+
+        return builder.toString();
+    }
+
+}
+```
 ###### /java/seedu/doit/logic/commands/DeleteCommand.java
 ``` java
 /**
@@ -106,14 +175,16 @@ public class AddCommand extends Command {
 public class DeleteCommand extends Command {
 
     public static final String COMMAND_WORD = "delete";
-
+    public static final String COMMAND_PARAMETER = "INDEX";
+    public static final String COMMAND_RESULT = "Deletes task at the specified index";
+    public static final String COMMAND_EXAMPLE = "delete 3";
     public static final String MESSAGE_USAGE = COMMAND_WORD
 
         + ": Deletes the task identified by the index number used in the last task list.\n"
         + "Parameters: INDEX (must be a positive integer)\n"
         + "Example: " + COMMAND_WORD + " 1";
 
-    public static final String MESSAGE_DELETE_TASK_SUCCESS = "Deleted Task: %1$s";
+    public static final String MESSAGE_DELETE_TASK_SUCCESS = "Deleted Task(s): %1$s";
 
     private Set<Integer> targetIndexes;
     private HashSet<ReadOnlyTask> tasksToDeleteSet = new HashSet<>();
@@ -127,34 +198,45 @@ public class DeleteCommand extends Command {
     @Override
     public CommandResult execute() throws CommandException {
 
-        UnmodifiableObservableList<ReadOnlyTask> lastShownTaskList = model.getFilteredTaskList();
+        UnmodifiableObservableList<ReadOnlyTask> lastShownTaskList = this.model.getFilteredTaskList();
 
         if (isAnyInvalidIndex(lastShownTaskList)) {
             throw new CommandException(Messages.MESSAGE_INVALID_TASK_DISPLAYED_INDEX);
         }
 
-        for (int index: targetIndexes) {
+        for (int index: this.targetIndexes) {
             ReadOnlyTask taskToBeDeleted = lastShownTaskList.get(index - 1);
-            tasksToDeleteSet.add(taskToBeDeleted);
+            this.tasksToDeleteSet.add(taskToBeDeleted);
         }
 
-        try {
-            model.deleteTasks(tasksToDeleteSet);
-        } catch (TaskNotFoundException pnfe) {
-            assert false : "The target task cannot be missing";
-        }
-        return new CommandResult(String.format(MESSAGE_DELETE_TASK_SUCCESS, tasksToDeleteSet.iterator().next()));
+        this.model.deleteTasks(this.tasksToDeleteSet);
 
+        return new CommandResult(String.format(MESSAGE_DELETE_TASK_SUCCESS,
+            tasksToString(tasksToDeleteSet)));
     }
     /**
      *
      * Checks if any index is invalid
      */
     private boolean isAnyInvalidIndex(UnmodifiableObservableList<ReadOnlyTask> lastShownTaskList) {
-        boolean test = targetIndexes.stream().anyMatch(index -> index < 0 || index > lastShownTaskList.size());
-        return test;
+        return this.targetIndexes.stream().anyMatch(index -> index < 0 || index > lastShownTaskList.size());
     }
 
+    public static String getName() {
+        return COMMAND_WORD;
+    }
+
+    public static String getParameter() {
+        return COMMAND_PARAMETER;
+    }
+
+    public static String getResult() {
+        return COMMAND_RESULT;
+    }
+
+    public static String getExample() {
+        return COMMAND_EXAMPLE;
+    }
 }
 ```
 ###### /java/seedu/doit/logic/commands/DoneCommand.java
@@ -165,14 +247,32 @@ public class DeleteCommand extends Command {
 public class DoneCommand extends Command {
 
     public static final String COMMAND_WORD = "done";
-
+    public static final String COMMAND_PARAMETER = "";
+    public static final String COMMAND_RESULT = "Displays all completed tasks";
+    public static final String COMMAND_EXAMPLE = "done";
     public static final String MESSAGE_SUCCESS = "Listed all done tasks";
 
 
     @Override
     public CommandResult execute() {
-        model.updateFilteredListToShowDone();
+        this.model.updateFilteredListToShowDone();
         return new CommandResult(MESSAGE_SUCCESS);
+    }
+
+    public static String getName() {
+        return COMMAND_WORD;
+    }
+
+    public static String getParameter() {
+        return COMMAND_PARAMETER;
+    }
+
+    public static String getResult() {
+        return COMMAND_RESULT;
+    }
+
+    public static String getExample() {
+        return COMMAND_EXAMPLE;
     }
 }
 ```
@@ -185,12 +285,11 @@ public class DoneCommand extends Command {
 public class EditCommand extends Command {
 
     public static final String COMMAND_WORD = "edit";
-    public static final String MESSAGE_USAGE = COMMAND_WORD + ": Edits the details of the task identified "
-        + "by the index number used in the last task list. "
-        + "Existing values will be overwritten by the input values.\n"
-        + "Parameters: INDEX (must be a positive integer) [TASK NAME] [p/PRIORITY] [e/END DATE] "
-        + "[d/ADDITIONAL DESCRIPTION] [t/TAG]...\n"
-        + "Example: " + COMMAND_WORD + " 1 p/1 e/15-3-2020 23:59";
+    public static final String COMMAND_PARAMETER = "INDEX [NAME] [s/START TIME] [e/END TIME] [p/PRIORITY] [#TAG]";
+    public static final String COMMAND_RESULT = "Edits existing task with new details";
+    public static final String COMMAND_EXAMPLE = "edit 1 s/9pm e/11pm p/high t/CS1010";
+    public static final String MESSAGE_USAGE = COMMAND_WORD + ": " + COMMAND_RESULT + "Parameters: " + COMMAND_PARAMETER
+            + "\nExample: " + COMMAND_EXAMPLE;
 
     public static final String MESSAGE_EDIT_TASK_SUCCESS = "Edited Task: %1$s";
     public static final String MESSAGE_NOT_EDITED = "At least one field to edit must be provided.";
@@ -200,8 +299,10 @@ public class EditCommand extends Command {
     private EditTaskDescriptor editTaskDescriptor;
 
     /**
-     * @param filteredTaskListIndex the index of the task in the filtered task list to edit
-     * @param editTaskDescriptor    details to edit the task with
+     * @param filteredTaskListIndex
+     *            the index of the task in the filtered task list to edit
+     * @param editTaskDescriptor
+     *            details to edit the task with
      */
 
     public EditCommand(int filteredTaskListIndex, EditTaskDescriptor editTaskDescriptor) {
@@ -217,8 +318,7 @@ public class EditCommand extends Command {
      * Creates and returns a {@code Task} with the details of {@code taskToEdit}
      * edited with {@code editTaskDescriptor}.
      */
-    private static Task createEditedTask(ReadOnlyTask taskToEdit,
-                                         EditTaskDescriptor editTaskDescriptor) {
+    private static Task createEditedTask(ReadOnlyTask taskToEdit, EditTaskDescriptor editTaskDescriptor) {
         assert taskToEdit != null;
         assert editTaskDescriptor != null;
 
@@ -229,16 +329,14 @@ public class EditCommand extends Command {
         Description updatedDescription = editTaskDescriptor.getDescription().orElseGet(taskToEdit::getDescription);
         UniqueTagList updatedTags = editTaskDescriptor.getTags().orElseGet(taskToEdit::getTags);
 
-        return new Task(updatedName, updatedPriority, updatedStartTime,
-            updatedDeadline, updatedDescription, updatedTags);
+        return new Task(updatedName, updatedPriority, updatedStartTime, updatedDeadline, updatedDescription,
+                updatedTags);
     }
-
 
     @Override
     public CommandResult execute() throws CommandException {
 
         List<ReadOnlyTask> lastShownTaskList = this.model.getFilteredTaskList();
-
 
         if (this.filteredTaskListIndex >= lastShownTaskList.size()) {
             throw new CommandException(Messages.MESSAGE_INVALID_TASK_DISPLAYED_INDEX);
@@ -253,16 +351,16 @@ public class EditCommand extends Command {
                 throw new CommandException(MESSAGE_DUPLICATE_TASK);
             }
             this.model.updateFilteredListToShowAll();
-            EventsCenter.getInstance().post(new JumpToListRequestEvent(
-                    this.model.getFilteredTaskList().indexOf(editedTask)));
+            EventsCenter.getInstance()
+                    .post(new JumpToListRequestEvent(this.model.getFilteredTaskList().indexOf(editedTask)));
             return new CommandResult(String.format(MESSAGE_EDIT_TASK_SUCCESS, taskToEdit));
 
         }
     }
 
     /**
-     * Stores the details to edit the task with. Each non-empty field value will replace the
-     * corresponding field value of the task.
+     * Stores the details to edit the task with. Each non-empty field value will
+     * replace the corresponding field value of the task.
      */
     public static class EditTaskDescriptor {
         protected Optional<Name> name = Optional.empty();
@@ -288,8 +386,8 @@ public class EditCommand extends Command {
          * Returns true if at least one field is edited.
          */
         public boolean isAnyFieldEdited() {
-            return CollectionUtil.isAnyPresent(this.name, this.priority, this.description, this.tags,
-                this.deadline, this.startTime);
+            return CollectionUtil.isAnyPresent(this.name, this.priority, this.description, this.tags, this.deadline,
+                    this.startTime);
         }
 
         public Optional<Name> getName() {
@@ -347,23 +445,41 @@ public class EditCommand extends Command {
         }
     }
 
+    public static String getName() {
+        return COMMAND_WORD;
+    }
+
+    public static String getParameter() {
+        return COMMAND_PARAMETER;
+    }
+
+    public static String getResult() {
+        return COMMAND_RESULT;
+    }
+
+    public static String getExample() {
+        return COMMAND_EXAMPLE;
+    }
 
 }
 ```
 ###### /java/seedu/doit/logic/commands/FindCommand.java
 ``` java
 /**
- * Finds and lists all tasks in task manager whose name contains any of the argument keywords.
- * Keyword matching is case sensitive.
+ * Finds and lists all tasks in task manager whose name contains any of the
+ * argument keywords. Keyword matching is case sensitive.
  */
 public class FindCommand extends Command {
-
+    public static final String COMMAND_RESULT = "";
     public static final String COMMAND_WORD = "find";
-
+    public static final String COMMAND_EXAMPLES = COMMAND_WORD + " n/Task A p/high e/ 12/30/2020 23:59\n" + COMMAND_WORD
+            + " p/low s/ 12/30/2020 23:59\n" + COMMAND_WORD + " t/project";
+    public static final String COMMAND_PARAMETER = "n/TASK NAME p/PRIORITY s/START DATE&TIME "
+            + "e/END DATE&TIME  d/ADDITIONAL DESCRIPTION [t/TAG]...\n"
+            + "Date format must be MM/DD/YYYY. Time format must be HH:MM.";
     public static final String MESSAGE_USAGE = COMMAND_WORD + ": Finds all tasks whose names contain any of "
-        + "the specified keywords (case-sensitive) and displays them as a list with index numbers.\n"
-        + "Parameters: KEYWORD [MORE_KEYWORDS]...\n"
-        + "Example: " + COMMAND_WORD + " Task A Project 3 Print 10 pages";
+            + "the specified keywords (case-sensitive) and displays them as a list with index numbers.\n"
+            + "Parameters: " + COMMAND_PARAMETER + "\n" + "Example: " + COMMAND_EXAMPLES;
 
     private final Set<String> namekeywords;
     private final Set<String> startTimekeywords;
@@ -373,7 +489,7 @@ public class FindCommand extends Command {
     private final Set<String> desckeywords;
 
     public FindCommand(Set<String> namekeywords, Set<String> startTimekeywords, Set<String> endTimekeywords,
-                       Set<String> prioritykeywords, Set<String> tagskeywords, Set<String> desckeywords) {
+            Set<String> prioritykeywords, Set<String> tagskeywords, Set<String> desckeywords) {
         this.namekeywords = namekeywords;
         this.startTimekeywords = startTimekeywords;
         this.endTimekeywords = endTimekeywords;
@@ -384,11 +500,27 @@ public class FindCommand extends Command {
 
     @Override
     public CommandResult execute() {
-        model.updateFilteredTaskList(namekeywords, prioritykeywords, desckeywords, tagskeywords, startTimekeywords,
-                endTimekeywords);
-        return new CommandResult(getMessageForTaskListShownSummary(model.getFilteredTaskList().size()));
+        this.model.updateFilteredTaskList(this.namekeywords, this.prioritykeywords, this.desckeywords,
+                this.tagskeywords, this.startTimekeywords, this.endTimekeywords);
+        return new CommandResult(getMessageForTaskListShownSummary(this.model.getFilteredTaskList().size()));
+
     }
 
+    public static String getName() {
+        return COMMAND_WORD;
+    }
+
+    public static String getParameter() {
+        return COMMAND_PARAMETER;
+    }
+
+    public static String getResult() {
+        return COMMAND_RESULT;
+    }
+
+    public static String getExample() {
+        return COMMAND_EXAMPLES;
+    }
 }
 ```
 ###### /java/seedu/doit/logic/commands/SortCommand.java
@@ -400,6 +532,12 @@ public class FindCommand extends Command {
 public class SortCommand extends Command {
 
     public static final String COMMAND_WORD = "sort";
+    public static final String COMMAND_PARAMETER = "SORT_CHOICE";
+    public static final String COMMAND_RESULT = "Sort tasks by name, priority, end time , start time";
+    public static final String COMMAND_EXAMPLE = "sort name"
+            + "sort priority"
+            + "sort end time"
+            + "sort start time";
 
     public static final String MESSAGE_USAGE = COMMAND_WORD + ": sorts all tasks by the specified type\n"
         + "Example: " + COMMAND_WORD + " priority";
@@ -412,14 +550,46 @@ public class SortCommand extends Command {
 
     @Override
     public CommandResult execute() {
-        model.sortBy(type);
-        return new CommandResult(getMessageForTaskListShownSortedSummary(model.getFilteredTaskList().size()));
+        this.model.sortBy(this.type);
+        return new CommandResult(getMessageForTaskListShownSortedSummary(this.model.getFilteredTaskList().size()));
+    }
+
+    public static String getName() {
+        return COMMAND_WORD;
+    }
+
+    public static String getParameter() {
+        return COMMAND_PARAMETER;
+    }
+
+    public static String getResult() {
+        return COMMAND_RESULT;
+    }
+
+    public static String getExample() {
+        return COMMAND_EXAMPLE;
     }
 
 }
 ```
 ###### /java/seedu/doit/logic/parser/AddCommandParser.java
 ``` java
+package seedu.doit.logic.parser;
+
+import static seedu.doit.commons.core.Messages.MESSAGE_INVALID_COMMAND_FORMAT;
+import static seedu.doit.logic.parser.CliSyntax.PREFIX_DESCRIPTION;
+import static seedu.doit.logic.parser.CliSyntax.PREFIX_END;
+import static seedu.doit.logic.parser.CliSyntax.PREFIX_PRIORITY;
+import static seedu.doit.logic.parser.CliSyntax.PREFIX_START;
+import static seedu.doit.logic.parser.CliSyntax.PREFIX_TAG;
+
+import java.util.NoSuchElementException;
+
+import seedu.doit.commons.exceptions.IllegalValueException;
+import seedu.doit.logic.commands.AddCommand;
+import seedu.doit.logic.commands.Command;
+import seedu.doit.logic.commands.IncorrectCommand;
+
 
 /**
  * Parses input arguments and creates a new AddCommand object
@@ -436,40 +606,15 @@ public class AddCommandParser implements CommandParser {
             new ArgumentTokenizer(PREFIX_PRIORITY, PREFIX_START, PREFIX_END, PREFIX_DESCRIPTION, PREFIX_TAG);
         argsTokenizer.tokenize(args);
 
-        boolean doesStartDateExist = argsTokenizer.getValue(PREFIX_START).isPresent();
-        boolean doesEndDateExist = argsTokenizer.getValue(PREFIX_END).isPresent();
-
         try {
-            if (doesStartDateExist && doesEndDateExist) {
-                //for event
-                return new AddCommand(
-                    argsTokenizer.getPreamble().get(),
-                    argsTokenizer.getValue(PREFIX_PRIORITY).orElse("low"),
-                    argsTokenizer.getValue(PREFIX_START).get(),
-                    argsTokenizer.getValue(PREFIX_END).get(),
-                    argsTokenizer.getValue(PREFIX_DESCRIPTION).orElse(""),
-                    ParserUtil.toSet(argsTokenizer.getAllValues(PREFIX_TAG))
-                );
-            } else if (doesEndDateExist) {
-                //for task
-                return new AddCommand(
-                    argsTokenizer.getPreamble().get(),
-                    argsTokenizer.getValue(PREFIX_PRIORITY).orElse("low"),
-                    argsTokenizer.getValue(PREFIX_END).get(),
-                    argsTokenizer.getValue(PREFIX_DESCRIPTION).orElse(""),
-                    ParserUtil.toSet(argsTokenizer.getAllValues(PREFIX_TAG))
-                );
-            } else if (!doesStartDateExist && !doesEndDateExist) {
-                //for floating task
-                return new AddCommand(
-                    argsTokenizer.getPreamble().get(),
-                    argsTokenizer.getValue(PREFIX_PRIORITY).orElse("low"),
-                    argsTokenizer.getValue(PREFIX_DESCRIPTION).orElse(""),
-                    ParserUtil.toSet(argsTokenizer.getAllValues(PREFIX_TAG))
-                );
-            } else {
-                return new IncorrectCommand(String.format(MESSAGE_INVALID_COMMAND_FORMAT, AddCommand.MESSAGE_USAGE));
-            }
+            return new AddCommand(
+                argsTokenizer.getPreamble().get(),
+                argsTokenizer.getValue(PREFIX_PRIORITY).orElse("low"),
+                argsTokenizer.getValue(PREFIX_START).orElse(""),
+                argsTokenizer.getValue(PREFIX_END).orElse(""),
+                argsTokenizer.getValue(PREFIX_DESCRIPTION).orElse(""),
+                ParserUtil.toSet(argsTokenizer.getAllValues(PREFIX_TAG))
+            );
         } catch (NoSuchElementException nsee) {
             return new IncorrectCommand(String.format(MESSAGE_INVALID_COMMAND_FORMAT, AddCommand.MESSAGE_USAGE));
         } catch (IllegalValueException ive) {
@@ -520,11 +665,16 @@ public class CliSyntax {
 ```
 ###### /java/seedu/doit/logic/parser/DateTimeParser.java
 ``` java
+
 /**
  * Parses date & time using natty Parser
  */
 
 public class DateTimeParser {
+    private static final String MESSAGE_TIME_CONSTRAINTS = "Date/Time should be in "
+        + "MM-DD-YY HH:MM Format or relative date today, tomorrow, next wednesday";
+
+    private static final String DAY_MONTH_SWITCH_REGEX = "^(\\d+/)(\\d+/)(\\d+.*)";
 
     /**
      * Parses string input into LocalDateTime object using natty
@@ -532,9 +682,22 @@ public class DateTimeParser {
      * @param input naturally typed date/time with reference to current date
      * @return Optional type of LocalDateTime object, returns optional type of empty if  unable to parse
      */
-    public static Optional<LocalDateTime> parseDateTime(String input) {
+
+    private static final String EMPTY_STRING = "";
+
+    public static Optional<LocalDateTime> parseDateTime(String input) throws IllegalValueException {
         Date date = new Date(); //get current date
         Parser dateTimeParser = new Parser();
+
+        if (input.matches(DAY_MONTH_SWITCH_REGEX)) {
+            //changes format from dd/mm/yy to mm/dd/yy as natty can only parse in mm/dd/yy format
+            input = switchDayToMonth(input);
+        }
+
+        if (input.equals(EMPTY_STRING)) {
+            return Optional.empty();
+        }
+
         List<DateGroup> groupsOfDateGroup = dateTimeParser.parse(input, date);
 
         if (groupsOfDateGroup.isEmpty()) {
@@ -547,10 +710,30 @@ public class DateTimeParser {
             return Optional.empty();
         }
 
+        //checks if natty parses all the input, if it does not, it means there is invalid input after the valid time
+        //or another date/time
+        if (!dateGroup.getFullText().equals(dateGroup.getText())) {
+            throw new IllegalValueException(MESSAGE_TIME_CONSTRAINTS);
+        }
+
         Date parsedDate = dateGroup.getDates().get(0);
         LocalDateTime localDateTime = LocalDateTime.ofInstant(parsedDate.toInstant(), ZoneId.systemDefault());
 
         return Optional.of(localDateTime);
+    }
+    /**
+     * Switch the day and month location of the date String
+     *
+     * @param input A String in DD/MM/YY format.
+     * @return      a String in MM/DD/YY.
+     */
+    private static String switchDayToMonth(String input) {
+        Pattern dayMonthSwitchPattern = Pattern.compile(DAY_MONTH_SWITCH_REGEX);
+        Matcher matcher = dayMonthSwitchPattern.matcher(input);
+
+        matcher.matches(); //to ensure output for matcher.group()
+
+        return matcher.group(2) + matcher.group(1) + matcher.group(3);
     }
 }
 ```
@@ -661,10 +844,30 @@ public class EditCommandParser implements CommandParser {
  */
 public class FindCommandParser implements CommandParser {
 
+    public static final String NO_NAME_AFTER_PREFIX = String.format(MESSAGE_INVALID_COMMAND_FORMAT,
+            "There must be a name present after n/.\nExample: find n/Project Work");
+    public static final String NO_PRIORITY_AFTER_PREFIX = String.format(MESSAGE_INVALID_COMMAND_FORMAT,
+            "There must be at least a valid priority present after p/. Valid priorities are high, med and low only.\n"
+                    + "Examples:\nfind p/high\nfind p/high low");
+    public static final String NO_STARTTIME_AFTER_PREFIX = String.format(MESSAGE_INVALID_COMMAND_FORMAT,
+            "There must be at least a valid start time or date present after s/ in a MM/DD/YYYY HH:MM format.\n"
+                    + "Examples:\nfind s/23:59\nfind s/04/31/2020\nfind s/04/31/2020 23:59");
+    public static final String NO_TAGS_AFTER_PREFIX = String.format(MESSAGE_INVALID_COMMAND_FORMAT,
+            "There must be a tag name present after t/.\nExample: find t/Friends");
+    public static final String NO_ENDTIME_AFTER_PREFIX = String.format(MESSAGE_INVALID_COMMAND_FORMAT,
+            "There must be at least a valid end time or date present after e/ in a MM/DD/YYYY HH:MM format.\n"
+                    + "Examples:\nfind e/23:59\nfind e/04/31/2020\nfind e/04/31/2020 23:59");
+
+    private static final String EMPTY_STRING = "";
+    private static final String PRIORITY_LOW = "low";
+    private static final String PRIORITY_MED = "med";
+    private static final String PRIORITY_HIGH = "high";
+
     /**
      * Parses the given {@code String} of arguments in the context of the
      * FindCommand and returns an FindCommand object for execution.
      */
+
 
     @Override
     public Command parse(String args) {
@@ -672,32 +875,144 @@ public class FindCommandParser implements CommandParser {
         ArgumentTokenizer argsTokenizer = new ArgumentTokenizer(PREFIX_NAME, PREFIX_PRIORITY, PREFIX_START, PREFIX_END,
                 PREFIX_DESCRIPTION, PREFIX_TAG);
         argsTokenizer.tokenize(args);
-        Set<String> nameKeyWordSet = new HashSet<>(
-                argsTokenizer.getAllValuesAfterPrefixAndSpaces(PREFIX_NAME).orElse(Collections.emptyList()));
-        Set<String> priorityKeyWordSet = new HashSet<>(
-                argsTokenizer.getAllValuesAfterPrefixAndSpaces(PREFIX_PRIORITY).orElse(Collections.emptyList()));
-        Set<String> startKeyWordSet = new HashSet<>(
-                argsTokenizer.getAllValuesAfterPrefixAndSpaces(PREFIX_START).orElse(Collections.emptyList()));
-        Set<String> deadlineKeyWordSet = new HashSet<>(
-                argsTokenizer.getAllValuesAfterPrefixAndSpaces(PREFIX_END).orElse(Collections.emptyList()));
-        Set<String> tagsKeyWordSet = new HashSet<>(
-                argsTokenizer.getAllValuesAfterPrefixAndSpaces(PREFIX_TAG).orElse(Collections.emptyList()));
-        Set<String> descKeyWordSet = new HashSet<>(
-                argsTokenizer.getAllValuesAfterPrefixAndSpaces(PREFIX_DESCRIPTION).orElse(Collections.emptyList()));
+        List<String> nameKeyWords = argsTokenizer.getAllValuesAfterPrefixAndSpaces(PREFIX_NAME)
+                .orElse(Collections.emptyList());
+        Set<String> nameKeyWordSet = new HashSet<>(nameKeyWords);
+        List<String> priorityKeyWords = argsTokenizer.getAllValuesAfterPrefixAndSpaces(PREFIX_PRIORITY)
+                .orElse(Collections.emptyList());
+        Set<String> priorityKeyWordSet = new HashSet<>(priorityKeyWords);
+        List<String> startTimeKeyWords = argsTokenizer.getAllValuesAfterPrefixAndSpaces(PREFIX_START)
+                .orElse(Collections.emptyList());
+        Set<String> startKeyWordSet = new HashSet<>(startTimeKeyWords);
+        List<String> endTimeKeyWords = argsTokenizer.getAllValuesAfterPrefixAndSpaces(PREFIX_END)
+                .orElse(Collections.emptyList());
+        Set<String> endKeyWordSet = new HashSet<>(endTimeKeyWords);
+        List<String> tagsKeyWords = argsTokenizer.getAllValuesAfterPrefixAndSpaces(PREFIX_TAG)
+                .orElse(Collections.emptyList());
+        Set<String> tagsKeyWordSet = new HashSet<>(tagsKeyWords);
+        List<String> descriptionKeyWords = argsTokenizer.getAllValuesAfterPrefixAndSpaces(PREFIX_DESCRIPTION)
+                .orElse(Collections.emptyList());
+        Set<String> descKeyWordSet = new HashSet<>(descriptionKeyWords);
 
-        final Matcher matcher = KEYWORDS_ARGS_FORMAT.matcher(args.trim());
-        if (!matcher.matches()) {
-            return new IncorrectCommand(
-                String.format(MESSAGE_INVALID_COMMAND_FORMAT, FindCommand.MESSAGE_USAGE));
+        if (isAllKeyWordSetEmpty(nameKeyWordSet, priorityKeyWordSet, startKeyWordSet, endKeyWordSet, tagsKeyWordSet,
+                descKeyWordSet)) {
+            return new IncorrectCommand(String.format(MESSAGE_INVALID_COMMAND_FORMAT, FindCommand.MESSAGE_USAGE));
+        }
+
+        if (nameKeyWords.contains(EMPTY_STRING)) {
+            return new IncorrectCommand(NO_NAME_AFTER_PREFIX);
+        }
+        if (!isValidPriorityKeyWordsPresent(priorityKeyWords, priorityKeyWordSet)) {
+            return new IncorrectCommand(NO_PRIORITY_AFTER_PREFIX);
+        }
+        if (startTimeKeyWords.contains(EMPTY_STRING)) {
+            return new IncorrectCommand(NO_STARTTIME_AFTER_PREFIX);
+        }
+        if (endTimeKeyWords.contains(EMPTY_STRING)) {
+            return new IncorrectCommand(NO_ENDTIME_AFTER_PREFIX);
+        }
+        if (tagsKeyWords.contains(EMPTY_STRING)) {
+            return new IncorrectCommand(NO_TAGS_AFTER_PREFIX);
         }
 
         // keywords delimited by whitespace
-        return new FindCommand(nameKeyWordSet, startKeyWordSet, deadlineKeyWordSet,
-            priorityKeyWordSet, tagsKeyWordSet, descKeyWordSet);
+        return new FindCommand(nameKeyWordSet, startKeyWordSet, endKeyWordSet, priorityKeyWordSet, tagsKeyWordSet,
+                descKeyWordSet);
 
     }
 
+    /**
+     * Checks if the priority keywords inputed by user is valid
+     *
+     * @param priorityKeyWords
+     * @param priorityKeyWordSet
+     * @return true if high med and low are either present in the priority
+     *         keywords list else false if non of them present.
+     */
+    private boolean isValidPriorityKeyWordsPresent(List<String> priorityKeyWords, Set<String> priorityKeyWordSet) {
+        if (priorityKeyWordSet.isEmpty()) {
+            return true;
+        }
+        if (priorityKeyWords.contains(EMPTY_STRING)) {
+            return false;
+        } else if (priorityKeyWords.contains(PRIORITY_HIGH) || priorityKeyWords.contains(PRIORITY_MED)
+                || priorityKeyWords.contains(PRIORITY_LOW)) {
+            return true;
+        }
+        return false;
+    }
+
+    private boolean isAllKeyWordSetEmpty(Set<String> nameKeyWordSet, Set<String> priorityKeyWordSet,
+            Set<String> startKeyWordSet, Set<String> deadlineKeyWordSet, Set<String> tagsKeyWordSet,
+            Set<String> descKeyWordSet) {
+
+        return nameKeyWordSet.isEmpty() && priorityKeyWordSet.isEmpty() && startKeyWordSet.isEmpty()
+                && deadlineKeyWordSet.isEmpty() && tagsKeyWordSet.isEmpty() && descKeyWordSet.isEmpty();
+    }
+
 }
+```
+###### /java/seedu/doit/logic/parser/MarkCommandParser.java
+``` java
+/**
+ * Parses input arguments and creates a new MarkCommand object
+ */
+public class MarkCommandParser implements CommandParser {
+
+    /**
+     * Parses the given {@code String} of arguments in the context of the MarkCommand
+     * and returns an MarkCommand object for execution.
+     */
+    @Override
+    public Command parse(String args) {
+
+        Optional<Integer> index = ParserUtil.parseIndex(args);
+        if (!index.isPresent()) {
+            return new IncorrectCommand(
+                String.format(MESSAGE_INVALID_COMMAND_FORMAT, MarkCommand.MESSAGE_USAGE));
+        }
+
+        return new MarkCommand(index.get());
+    }
+
+}
+```
+###### /java/seedu/doit/logic/parser/ParserUtil.java
+``` java
+
+    /**
+     * Returns a set of specified indexes in the {@code command} if it is a set of positive unsigned integers
+     * Returns an {@code Optional.empty()} otherwise.
+     */
+    public static Set<Integer> parseIndexes(String args) {
+        Pattern indexesPattern = Pattern.compile("((\\d+|\\d+-\\d+)?[ ]*)+");
+        Matcher matcher = indexesPattern.matcher(args.trim());
+
+        Set<Integer> emptySet = new HashSet<>();
+        Set<Integer> taskNumSet = new HashSet<>();
+
+        if (!matcher.matches()) {
+            return emptySet;
+        }
+
+        String[] taskNumStringArr = args.split(" ");
+        for (String taskNumString : taskNumStringArr) {
+            if (taskNumString.matches("\\d+")) {
+                taskNumSet.add(Integer.parseInt(taskNumString));
+            } else if (taskNumString.matches("\\d+-\\d+")) {
+                String[] startAndEndIndexes = taskNumString.split("-");
+                int startIndex = Integer.parseInt(startAndEndIndexes[0]);
+                int endIndex = Integer.parseInt(startAndEndIndexes[1]);
+                taskNumSet.addAll(IntStream.rangeClosed(startIndex, endIndex).boxed().collect(Collectors.toSet()));
+            }
+        }
+
+        if (taskNumSet.remove(0)) {
+            return emptySet;
+        }
+        return taskNumSet;
+    }
+
 ```
 ###### /java/seedu/doit/logic/parser/SortCommandParser.java
 ``` java
@@ -719,5 +1034,83 @@ public class SortCommandParser implements CommandParser {
                 String.format(MESSAGE_INVALID_COMMAND_FORMAT, SortCommand.MESSAGE_USAGE));
         }
     }
+}
+```
+###### /java/seedu/doit/model/item/ReadOnlyTask.java
+``` java
+
+    /**
+     * Formats the event as text, showing all details.
+     */
+    default String getAsText() {
+        final StringBuilder builder = new StringBuilder();
+
+        appendName(builder);
+        appendPriority(builder);
+        appendStartTime(builder);
+        appendEndTime(builder);
+        appendDescription(builder);
+        appendTags(builder);
+
+        return builder.toString();
+    }
+
+    /**
+     * Returns the name of the task in String
+     */
+    default String getTaskName() {
+        return this.getTaskName();
+    }
+
+    default void appendName(StringBuilder builder) {
+        builder.append(getName());
+    }
+
+    default void appendPriority(StringBuilder builder) {
+        if (!getPriority().toString().equals("low")) {
+            builder.append(" Priority: ");
+            builder.append(getPriority());
+        }
+    }
+
+    default void appendStartTime(StringBuilder builder) {
+        if (hasStartTime()) {
+            builder.append(" Start Time: ");
+            builder.append(getStartTime());
+        }
+    }
+
+    default void appendEndTime(StringBuilder builder) {
+        if (hasEndTime()) {
+            builder.append(" End Time: ");
+            builder.append(getDeadline());
+        }
+    }
+
+    default void appendDescription(StringBuilder builder) {
+        if (!getDescription().toString().equals("")) {
+            builder.append(" Description: ");
+            builder.append(getDescription());
+        }
+    }
+
+    default void appendTags(StringBuilder builder) {
+        if (!getTags().asObservableList().isEmpty()) {
+            builder.append(" Tags: ");
+            getTags().forEach(builder::append);
+        }
+    }
+
+    boolean hasStartTime();
+
+    boolean hasEndTime();
+
+    int getItemType();
+
+    boolean isTask();
+
+    boolean isEvent();
+
+    boolean isFloatingTask();
 }
 ```
