--- a/collated/test/A0139399J.md
+++ b/collated/test/A0139399J.md
@@ -3,16 +3,22 @@
 ``` java
 package guitests;
 
+import static seedu.doit.commons.core.Messages.MESSAGE_INVALID_COMMAND_FORMAT;
+
 import org.junit.Test;
 
 import seedu.doit.commons.core.Messages;
+import seedu.doit.logic.commands.ClearCommand;
+import seedu.doit.logic.commands.DeleteCommand;
+import seedu.doit.logic.commands.FindCommand;
+import seedu.doit.logic.parser.FindCommandParser;
 import seedu.doit.testutil.TestTask;
 
 public class FindCommandTest extends TaskManagerGuiTest {
 
-    public static final String MESSAGE_FIND_COMMAND = "find ";
-    public static final String MESSAGE_TEST_CLEAR_COMMAND = "clear";
-    public static final String MESSAGE_TEST_DELETE_COMMAND = "delete 1";
+    public static final String MESSAGE_FIND_COMMAND = FindCommand.COMMAND_WORD + " ";
+    public static final String MESSAGE_TEST_CLEAR_COMMAND = ClearCommand.COMMAND_WORD;
+    public static final String MESSAGE_TEST_DELETE_COMMAND = DeleteCommand.COMMAND_WORD + " 1";
 
     public static final String MESSAGE_TEST_FIND_MARK = "find n/Mark";
     public static final String MESSAGE_TEST_FIND_MEIER = "find n/Meier";
@@ -20,61 +26,63 @@ public class FindCommandTest extends TaskManagerGuiTest {
     public static final String MESSAGE_TEST_FIND_PRIORITY = "find p/high";
     public static final String MESSAGE_TEST_FIND_DESCRIPTION = "find d/l";
     public static final String MESSAGE_TEST_FIND_TAG = "find t/owesMoney";
-    public static final String MESSAGE_TEST_FIND_STARTTIME = "find s/03/19/17";
-    public static final String MESSAGE_TEST_FIND_ENDTIME = "find e/03/20/17";
+    public static final String MESSAGE_TEST_FIND_STARTTIME = "find s/19/03/17";
+    public static final String MESSAGE_TEST_FIND_ENDTIME = "find e/20/03/17";
     public static final String MESSAGE_TEST_FIND_INVALID = "findn/george";
+    public static final String MESSAGE_TEST_INVALID_PARAMETERS = MESSAGE_FIND_COMMAND + "aaa";
 
     @Test
     public void find_name_nonEmptyList() {
         assertFindResult(MESSAGE_TEST_FIND_MARK); // no results
-        assertFindResult(MESSAGE_TEST_FIND_MEIER, td.benson, td.daniel); // multiple results
+        assertFindResult(MESSAGE_TEST_FIND_MEIER, this.td.benson, this.td.daniel); // multiple
+                                                                                   // results
 
-        //find after deleting one result
-        commandBox.runCommand(MESSAGE_TEST_DELETE_COMMAND);
-        assertFindResult(MESSAGE_TEST_FIND_MEIER, td.daniel);
+        // find after deleting one result
+        this.commandBox.runCommand(MESSAGE_TEST_DELETE_COMMAND);
+        assertFindResult(MESSAGE_TEST_FIND_MEIER, this.td.daniel);
     }
 
     @Test
     public void find_priority_nonEmptyList() {
-        assertFindResult(MESSAGE_TEST_FIND_PRIORITY, td.carl, td.daniel, td.george); // multiple results
+        assertFindResult(MESSAGE_TEST_FIND_PRIORITY, this.td.carl, this.td.daniel, this.td.george); // multiple
+                                                                                                    // results
     }
 
     @Test
     public void find_description_nonEmptyList() {
-        assertFindResult(MESSAGE_TEST_FIND_DESCRIPTION, td.aF, td.bF, td.cF, td.aE, td.bE, td.cE); // multiple results
+        assertFindResult(MESSAGE_TEST_FIND_DESCRIPTION, this.td.aF, this.td.bF, this.td.cF, this.td.aE, this.td.bE,
+                this.td.cE); // multiple results
     }
 
     @Test
     public void find_tag_nonEmptyList() {
-        assertFindResult(MESSAGE_TEST_FIND_TAG, td.benson); // multiple results
+        assertFindResult(MESSAGE_TEST_FIND_TAG, this.td.benson); // multiple
+                                                                 // results
     }
 
     @Test
     public void find_startTime_nonEmptyList() {
-        assertFindResult(MESSAGE_TEST_FIND_STARTTIME, td.aE, td.bE, td.cE); // multiple results
+        assertFindResult(MESSAGE_TEST_FIND_STARTTIME, this.td.aE, this.td.bE, this.td.cE); // multiple
+                                                                                           // results
     }
 
     @Test
     public void find_endTime_nonEmptyList() {
-        assertFindResult(MESSAGE_TEST_FIND_ENDTIME, td.george, td.aE, td.bE, td.cE); // multiple results
+        assertFindResult(MESSAGE_TEST_FIND_ENDTIME, this.td.george, this.td.aE, this.td.bE, this.td.cE); // multiple
+                                                                                                         // results
     }
-
-
 
     @Test
     public void find_emptyList() {
-        commandBox.runCommand(MESSAGE_TEST_CLEAR_COMMAND);
+        this.commandBox.runCommand(MESSAGE_TEST_CLEAR_COMMAND);
         assertFindResult(MESSAGE_TEST_FIND_JEAN); // no results
     }
 
-    @Test
-    public void find_invalidCommand_fail() {
-        commandBox.runCommand(MESSAGE_TEST_FIND_INVALID);
-        assertResultMessage(Messages.MESSAGE_UNKNOWN_COMMAND);
-    }
-
+```
+###### /java/guitests/FindCommandTest.java
+``` java
     private void assertFindResult(String command, TestTask... expectedHits) {
-        commandBox.runCommand(command);
+        this.commandBox.runCommand(command);
         assertListSize(expectedHits.length);
         assertResultMessage(expectedHits.length + " tasks listed!");
         assertAllPanelsMatch(expectedHits);
@@ -122,13 +130,16 @@ public class MarkCommandTest extends TaskManagerGuiTest {
     @Test
     public void mark_task_no_index_failure() throws Exception {
         this.commandBox.runCommand(MESSAGE_MARK_COMMAND);
+
+
         assertResultMessage(String.format(MESSAGE_INVALID_COMMAND_FORMAT, MarkCommand.MESSAGE_USAGE));
     }
 
     @Test
     public void mark_task_invalid_index_failure() throws Exception {
         this.commandBox.runCommand(MESSAGE_MARK_COMMAND + INDEX_MARK_INVALID);
-        assertResultMessage(String.format(MESSAGE_INVALID_COMMAND_FORMAT, MarkCommand.MESSAGE_USAGE));
+        assertResultMessage(
+                String.format(MESSAGE_INVALID_COMMAND_FORMAT, MarkCommand.MESSAGE_USAGE));
     }
 
     @Test
@@ -230,6 +241,9 @@ public class RedoCommandTest extends TaskManagerGuiTest {
         assertClearCommandSuccess();
     }
 
+```
+###### /java/guitests/RedoCommandTest.java
+``` java
     @Test
     public void redo_emptyStack_failure() {
         this.commandBox.runCommand(MESSAGE_REDO_COMMAND);
@@ -237,6 +251,9 @@ public class RedoCommandTest extends TaskManagerGuiTest {
 
     }
 
+```
+###### /java/guitests/RedoCommandTest.java
+``` java
     private void executeUndoThenRedo() {
         this.commandBox.runCommand(MESSAGE_TEST_UNDO_COMMAND);
         this.commandBox.runCommand(MESSAGE_REDO_COMMAND);
@@ -461,30 +478,35 @@ public class UndoCommandTest extends TaskManagerGuiTest {
         TestTask taskToAdd = TypicalTestTasks.getFloatingTestTask();
         this.commandBox.runCommand(taskToAdd.getAddCommand());
         this.commandBox.runCommand(MESSAGE_UNDO_COMMAND);
+        assertUndoSuccess();
     }
 
     @Test
     public void undo_delete_success() throws Exception {
         this.commandBox.runCommand(MESSAGE_TEST_DELETE_COMMAND);
         this.commandBox.runCommand(MESSAGE_UNDO_COMMAND);
+        assertUndoSuccess();
     }
 
     @Test
     public void undo_edit_success() throws Exception {
         this.commandBox.runCommand(MESSAGE_TEST_EDIT_COMMAND);
         this.commandBox.runCommand(MESSAGE_UNDO_COMMAND);
+        assertUndoSuccess();
     }
 
     @Test
     public void undo_mark_success() throws Exception {
         this.commandBox.runCommand(MESSAGE_TEST_MARK_COMMAND);
         this.commandBox.runCommand(MESSAGE_UNDO_COMMAND);
+        assertUndoSuccess();
     }
 
     @Test
     public void undo_clear_success() throws Exception {
         this.commandBox.runCommand(MESSAGE_TEST_CLEAR_COMMAND);
         this.commandBox.runCommand(MESSAGE_UNDO_COMMAND);
+        assertUndoSuccess();
     }
 
     @Test
@@ -494,6 +516,9 @@ public class UndoCommandTest extends TaskManagerGuiTest {
         assertResultMessage(UndoCommand.MESSAGE_FAILURE);
     }
 
+```
+###### /java/guitests/UndoCommandTest.java
+``` java
     private void assertUndoSuccess() {
         // confirm the list now contains all previous tasks plus the new task
         assertAllPanelsMatch(this.expectedTasksList);
