--- a/collated/test/A0160076L.md
+++ b/collated/test/A0160076L.md
@@ -19,6 +19,18 @@
         assertAddSuccess(taskToAdd, currentList);
         currentList = TestUtil.addTasksToList(currentList, taskToAdd);
 
+        // missing description
+        taskToAdd = TypicalTestTasks.getDeadlineTestTaskWithNoDescription();
+        assertAddSuccess(taskToAdd, currentList);
+        currentList = TestUtil.addTasksToList(currentList, taskToAdd);
+        assertAllPanelsMatch(currentList);
+
+        // add floating task with duplicate tags
+        taskToAdd = TypicalTestTasks.getFloatingTestTaskWithDuplicateTags();
+        assertAddSuccess(taskToAdd, currentList);
+        currentList = TestUtil.addTasksToList(currentList, taskToAdd);
+        assertAllPanelsMatch(currentList);
+
         // add duplicate floating task
         this.commandBox.runCommand(TypicalTestTasks.getFloatingTestTask().getAddCommand());
         assertResultMessage(AddCommand.MESSAGE_DUPLICATE_TASK);
@@ -45,16 +57,15 @@
         // invalid start time
         this.commandBox.runCommand(AddCommand.COMMAND_WORD + " invalid2 s/kjsdf e/today p/high d/sss");
         assertResultMessage(MESSAGE_STARTTIME_CONSTRAINTS);
+        // start time later than end time
+        this.commandBox.runCommand(AddCommand.COMMAND_WORD + " invalid2 s/tomorrow e/today p/high d/sss");
+        assertResultMessage(AddCommand.MESSAGE_INVALID_START_TIME);
         // invalid end time
         this.commandBox.runCommand(AddCommand.COMMAND_WORD + " invalid3 e/kjdgf p/high d/sss");
         assertResultMessage(MESSAGE_ENDTIME_CONSTRAINTS);
         // invalid priority
         this.commandBox.runCommand(AddCommand.COMMAND_WORD + " invalid4 p/dfjkhd d/sss");
         assertResultMessage(MESSAGE_PRIORITY_CONSTRAINTS);
-        // missing description
-        // this.commandBox.runCommand("add invalid5 e/today p/high");
-        // assertResultMessage(String.format(MESSAGE_INVALID_COMMAND_FORMAT,
-        // AddCommand.MESSAGE_USAGE));
     }
 ```
 ###### /java/guitests/DeleteCommandTest.java
@@ -76,7 +87,7 @@
         currentList = TestUtil.removeTaskFromList(currentList, targetIndex);
         targetIndex = currentList.length / 2;
         assertDeleteSuccess(targetIndex, currentList);
-    }
+
 ```
 ###### /java/guitests/EditCommandTest.java
 ``` java
@@ -316,7 +327,6 @@ import seedu.doit.model.tag.UniqueTagList;
  */
 public class TaskCardHandle extends GuiHandle {
     private static final String NAME_FIELD_ID = "#name";
-    private static final String DESCRIPTION_FIELD_ID = "#description";
     private static final String DEADLINE_FIELD_ID = "#deadline";
     private static final String TAGS_FIELD_ID = "#tags";
 
@@ -335,14 +345,9 @@ public class TaskCardHandle extends GuiHandle {
         return getTextFromLabel(NAME_FIELD_ID);
     }
 
-    public String getDescription() {
-        return getTextFromLabel(DESCRIPTION_FIELD_ID);
-    }
-
     public String getDeadline() {
         return getTextFromLabel(DEADLINE_FIELD_ID);
     }
-
 
     public List<String> getTags() {
         return getTags(getTagsContainer());
@@ -369,11 +374,8 @@ public class TaskCardHandle extends GuiHandle {
     }
 
     public boolean isSameTask(ReadOnlyTask task) {
-        return getFullName().equals(task.getName().fullName)
-            && getDescription().equals(task.getDescription().value);
+        return getFullName().equals(task.getName().fullName);
     }
-
-
 
     @Override
     public boolean equals(Object obj) {
@@ -381,7 +383,6 @@ public class TaskCardHandle extends GuiHandle {
             TaskCardHandle handle = (TaskCardHandle) obj;
             return getFullName().equals(handle.getFullName())
                 && getDeadline().equals(handle.getDeadline())
-                && getDescription().equals(handle.getDescription())
                 && getTags().equals(handle.getTags());
         }
         return super.equals(obj);
@@ -389,7 +390,7 @@ public class TaskCardHandle extends GuiHandle {
 
     @Override
     public String toString() {
-        return getFullName() + " " + getDescription();
+        return getFullName();
     }
 ```
 ###### /java/guitests/guihandles/TaskListPanelHandle.java
