--- a/collated/main/A0160076L.md
+++ b/collated/main/A0160076L.md
@@ -36,7 +36,7 @@ public class EventListPanel extends UiPart<Region> {
     private void setConnections(ObservableList<ReadOnlyTask> eventList) {
         mainTaskList = eventList;
         this.eventListView.setItems(eventList.filtered(task -> task.hasStartTime()
-                                   && task.hasEndTime() /*&& !task.getIsDone()*/));
+                                   ));
         this.eventListView.setCellFactory(listView -> new EventListViewCell());
         setEventHandlerForSelectionChangeEvent();
     }
@@ -123,7 +123,7 @@ public class FloatingTaskListPanel extends UiPart<Region> {
     private void setConnections(ObservableList<ReadOnlyTask> floatingTaskList) {
         mainTaskList = floatingTaskList;
         this.floatingTaskListView.setItems(floatingTaskList.filtered(task -> !task.hasStartTime()
-                                   && !task.hasEndTime() /*&& !task.getIsDone()*/));
+                                   && !task.hasEndTime()));
         this.floatingTaskListView.setCellFactory(listView -> new FloatingTaskListViewCell());
         setEventHandlerForSelectionChangeEvent();
     }
@@ -172,6 +172,112 @@ public class FloatingTaskListPanel extends UiPart<Region> {
 
 }
 ```
+###### /java/seedu/doit/ui/HelpWindow.java
+``` java
+/**
+ * Controller for a help page
+ */
+public class HelpWindow extends UiPart<Region> {
+
+    private static final Logger logger = LogsCenter.getLogger(HelpWindow.class);
+    private static final String ICON = "/images/help_icon.png";
+    private static final String FXML = "HelpWindow.fxml";
+    private static final String TITLE = "Help";
+    private final Stage dialogStage;
+    private static final double COMMAND_COLUMN_WIDTH = 0.15;
+    private static final double PARAMETER_COLUMN_WIDTH = 0.25;
+    private static final double RESULT_COLUMN_WIDTH = 0.3;
+    private static final double EXAMPLE_COLUMN_WIDTH = 0.3;
+    private static ObservableList<Map<CommandColumns, String>> commandList = FXCollections.observableArrayList();
+    private enum CommandColumns {
+        COMMAND, PARAMETER, RESULT, EXAMPLE
+    }
+
+    @FXML
+    private TableView<Map<CommandColumns, String>> commandTable;
+
+    @FXML
+    private TableColumn<Map<CommandColumns, String>, String> commandColumn;
+
+    @FXML
+    private TableColumn<Map<CommandColumns, String>, String> parameterColumn;
+
+    @FXML
+    private TableColumn<Map<CommandColumns, String>, String> resultColumn;
+
+    @FXML
+    private TableColumn<Map<CommandColumns, String>, String> exampleColumn;
+
+    /**
+     * Initializes the controller class. This method is automatically called
+     * after the fxml file has been loaded.
+     */
+    @FXML
+    private void initialize() {
+        this.commandColumn.setCellValueFactory(cellData ->
+            new SimpleStringProperty(cellData.getValue().get(CommandColumns.COMMAND)));
+        this.parameterColumn.setCellValueFactory(cellData ->
+            new SimpleStringProperty(cellData.getValue().get(CommandColumns.PARAMETER)));
+        this.resultColumn.setCellValueFactory(cellData ->
+            new SimpleStringProperty(cellData.getValue().get(CommandColumns.RESULT)));
+        this.exampleColumn.setCellValueFactory(cellData ->
+            new SimpleStringProperty(cellData.getValue().get(CommandColumns.EXAMPLE)));
+        this.commandTable.setItems(commandList);
+        this.commandTable.setEditable(false);
+    }
+
+    public HelpWindow() {
+        super(FXML);
+        Scene scene = new Scene(getRoot(), 1020, 350);
+        //Null passed as the parent stage to make it non-modal.
+        this.dialogStage = createDialogStage(TITLE, null, scene);
+        FxViewUtil.setStageIcon(this.dialogStage, ICON);
+    }
+
+    public void configure() {
+        this.commandColumn.prefWidthProperty().bind(this.commandTable.widthProperty().multiply(COMMAND_COLUMN_WIDTH));
+        this.parameterColumn.prefWidthProperty().bind
+            (this.commandTable.widthProperty().multiply(PARAMETER_COLUMN_WIDTH));
+        this.resultColumn.prefWidthProperty().bind(this.commandTable.widthProperty().multiply(RESULT_COLUMN_WIDTH));
+        this.exampleColumn.prefWidthProperty().bind(this.commandTable.widthProperty().multiply(EXAMPLE_COLUMN_WIDTH));
+        loadHelpList();
+    }
+
+    public void show() {
+        logger.fine("Showing help page about the application.");
+        this.dialogStage.showAndWait();
+    }
+
+    /**
+     * Uses Java reflection followed by Java stream.map() to retrieve all commands for listing on the Help
+     * window dynamically
+     */
+    private void loadHelpList() {
+        new Reflections("seedu.doit").getSubTypesOf(Command.class)
+        .stream()
+        .map(s -> {
+            try {
+                Map<CommandColumns, String> map = new HashMap<>();
+                map.put(CommandColumns.COMMAND, s.getMethod("getName").invoke(null).toString());
+                map.put(CommandColumns.PARAMETER, s.getMethod("getParameter").invoke(null).toString());
+                map.put(CommandColumns.RESULT, s.getMethod("getResult").invoke(null).toString());
+                map.put(CommandColumns.EXAMPLE, s.getMethod("getExample").invoke(null).toString());
+                return map;
+            } catch (NullPointerException e) {
+                return null;
+                // Suppress this exception are we expect some Commands to not conform to these methods
+            } catch (Exception e) {
+                logger.severe("Java reflection for Command class failed");
+                return null;
+            }
+        })
+        .filter(p -> p != null) // remove nulls
+        .sorted((lhs, rhs) -> lhs.get(CommandColumns.COMMAND).compareTo(rhs.get(CommandColumns.COMMAND)))
+            .forEach(m -> commandList.add(m));
+    }
+}
+//@@
+```
 ###### /java/seedu/doit/ui/MainWindow.java
 ``` java
     protected void fillInnerParts() {
@@ -193,37 +299,38 @@ public class FloatingTaskListPanel extends UiPart<Region> {
 
         return this.floatingListPanelPlaceholder;
     }
+
 ```
 ###### /java/seedu/doit/ui/MainWindow.java
 ``` java
     public EventListPanel getEventListPanel() {
         return this.eventListPanel;
     }
+
     public FloatingTaskListPanel getFloatingListPanel() {
         return this.fListPanel;
     }
 
     /**
-     *
      * Handle scrollTo in different lists
      */
     public void scrollTo(int index) {
-        if (index < this.logic.getFilteredTaskList().filtered(task -> !task.hasStartTime()
-                && task.hasEndTime() /*&& !task.getIsDone()*/).size()) {
+
+        if (index < this.logic.getFilteredTaskList().filtered(task -> task.isTask()).size()) {
             this.taskListPanel.scrollTo(index);
             this.eventListPanel.clearSelection();
             this.fListPanel.clearSelection();
-        } else if (index < this.logic.getFilteredTaskList().filtered(task -> !task.hasStartTime()
-                && task.hasEndTime()).size() + this.logic.getFilteredTaskList().filtered(task -> task.hasStartTime()
-                && task.hasEndTime() /*&& !task.getIsDone()*/).size()) {
-            this.eventListPanel.scrollTo(index - this.logic.getFilteredTaskList().filtered(task -> !task.hasStartTime()
-                    && task.hasEndTime() /*&& !task.getIsDone()*/).size());
+        } else if (index < this.logic.getFilteredTaskList().filtered(task -> task.isTask()).size()
+            + this.logic.getFilteredTaskList().filtered(task -> task.isEvent()
+        ).size()) {
+            this.eventListPanel.scrollTo(index - this.logic.getFilteredTaskList().filtered(task ->
+                task.isTask()).size());
             this.taskListPanel.clearSelection();
             this.fListPanel.clearSelection();
         } else {
-            this.fListPanel.scrollTo(index - this.logic.getFilteredTaskList().filtered(task -> !task.hasStartTime()
-                    && task.hasEndTime()).size() - this.logic.getFilteredTaskList().filtered(task -> task.hasStartTime()
-                            && task.hasEndTime() /*&& !task.getIsDone()*/).size());
+            this.fListPanel.scrollTo(index - this.logic.getFilteredTaskList().filtered(task ->
+                task.isTask()).size() - this.logic.getFilteredTaskList().filtered(task -> task.isEvent()).size());
+
             this.eventListPanel.clearSelection();
             this.taskListPanel.clearSelection();
         }
@@ -236,19 +343,36 @@ public class FloatingTaskListPanel extends UiPart<Region> {
         this.name.setText(task.getName().fullName);
         this.id.setText(displayedIndex + ". ");
         setStartTimeEndTime(task);
-        setOverdue(task);
+        setTimeColor(task);
         setLabelBullet(task);
-        this.description.setText(task.getDescription().value);
+        setDescriptionSign(task);
         initTags(task);
     }
 
     public boolean isOverdue(String dateTime) {
         LocalDateTime currentDateTime = LocalDateTime.now();
-        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("MM/dd/yy HH:mm");
+        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("dd/MM/yy HH:mm");
         LocalDateTime dateTimeToCompare = LocalDateTime.parse(dateTime, formatter);
         return !currentDateTime.isBefore(dateTimeToCompare);
     }
 
+    public boolean isDueSoon(String dateTime) {
+        LocalDateTime currentDateTime = LocalDateTime.now();
+        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("dd/MM/yy HH:mm");
+        LocalDateTime dateTimeToCompare = LocalDateTime.parse(dateTime, formatter);
+        return !currentDateTime.isBefore(dateTimeToCompare.minusDays(3));
+    }
+
+    private void setDescriptionSign(ReadOnlyTask task) {
+        this.description = new Image(descriptionSource);
+        this.descriptionSign.setImage(this.description);
+
+        if (task.getDescription() != null && !task.getDescription().toString().equals("")) {
+            this.descriptionSign.setVisible(true);
+        } else {
+            this.descriptionSign.setVisible(false);
+        }
+    }
     private void initTags(ReadOnlyTask task) {
         task.getTags().forEach(tag -> this.tags.getChildren().add(new Label(tag.tagName)));
     }
@@ -268,42 +392,45 @@ public class FloatingTaskListPanel extends UiPart<Region> {
             this.labelBullet.setOpacity(0);
         }
     }
-    /*private void setOverdue(ReadOnlyTask task) {
 
-        this.overdueSign.setVisible(false);
-        if (task.hasStartTime()) {
-            this.deadline.setText(task.getStartTime().value + " - " + task.getDeadline().value);
-            if (isOverdue(task.getDeadline().value)) {
-                this.overdueSign.setVisible(true);
-            }
-        } else if (task.hasEndTime()) {
-            this.deadline.setText(task.getDeadline().value);
-            if (isOverdue(task.getDeadline().value)) {
-                this.overdueSign.setVisible(true);
-            }
-        } else {
-            this.deadline.setText("");
-        }
-    }*/
-    private void setOverdue(ReadOnlyTask task) {
+    private void setTimeColor(ReadOnlyTask task) {
         if (task.hasEndTime() && isOverdue(task.getDeadline().value)) {
-            this.startTime.setStyle("-fx-text-fill:red");
-            this.deadline.setStyle("-fx-text-fill:red");
-            this.to.setStyle("-fx-text-fill:red");
+            setOverdue(task);
+        } else if (task.hasEndTime() && isDueSoon(task.getDeadline().value)) {
+            setDueSoon(task);
         } else {
-            this.startTime.setStyle("-fx-text-fill:white");
-            this.deadline.setStyle("-fx-text-fill:white");
-            this.to.setStyle("-fx-text-fill:white");
+            setNormalColor(task);
         }
+    }
+    private void setOverdue(ReadOnlyTask task) {
+        this.startTime.setStyle("-fx-text-fill:red");
+        this.deadline.setStyle("-fx-text-fill:red");
+        this.to.setStyle("-fx-text-fill:red");
+    }
 
+    private void setNormalColor(ReadOnlyTask task) {
+        this.startTime.setStyle("-fx-text-fill:white");
+        this.deadline.setStyle("-fx-text-fill:white");
+        this.to.setStyle("-fx-text-fill:white");
+    }
+
+    private void setDueSoon(ReadOnlyTask task) {
+        this.startTime.setStyle("-fx-text-fill: #FFFF66");
+        this.deadline.setStyle("-fx-text-fill:  #FFFF66");
+        this.to.setStyle("-fx-text-fill:#FFFF66");
     }
     private void setStartTimeEndTime(ReadOnlyTask task) {
-        if (task.hasStartTime()) {
+        if (task.hasStartTime() && task.hasEndTime()) {
             this.startTime.setVisible(true);
             this.startTime.setText(task.getStartTime().value);
             this.to.setVisible(true);
             this.deadline.setVisible(true);
             this.deadline.setText(task.getDeadline().value);
+        } else if (task.hasStartTime()) {
+            this.startTime.setVisible(true);
+            this.startTime.setText(task.getStartTime().value);
+            this.to.setVisible(false);
+            this.deadline.setVisible(false);
         } else if (task.hasEndTime()) {
             this.startTime.setVisible(false);
             this.to.setVisible(false);
@@ -351,19 +478,23 @@ public class FloatingTaskListPanel extends UiPart<Region> {
     -fx-opacity: 1;
 }
 
-.label-header {
+.text-field {
+    -fx-font-size: 12pt;
+    -fx-font-family: "Century Gothic";
+    -fx-font-weight: bold;
+}
+
+.text-header {
     -fx-font-size: 20pt;
     -fx-font-family: "Century Gothic";
     -fx-text-fill: #002c54;
     -fx-opacity: 1;
     -fx-font-weight: bold;
+    -fx-padding: 0 0 0 0;
+    -fx-background-color: transparent;
 
 }
 
-.text-field {
-    -fx-font-size: 12pt;
-    -fx-font-family: "Century Gothic";
-}
 
 .tab-pane {
     -fx-padding: 0 0 0 1;
@@ -415,7 +546,7 @@ public class FloatingTaskListPanel extends UiPart<Region> {
 }
 
 .split-pane-header {
-    -fx-border-radius: 1;
+    -fx-border-radius: 0;
     -fx-border-width: 0;
     -fx-background-color: derive(#1d1d1d, 20%);
 }
@@ -453,12 +584,15 @@ public class FloatingTaskListPanel extends UiPart<Region> {
 .anchor-pane {
     -fx-background-color: black;
     -fx-padding: 0 0 0 0;
+    -fx-border-radius:0;
+    -fx-background-radius: 0;
+
 }
 
 .anchor-pane-with-border {
     -fx-background-color: derive(#e2e8e4, 20%);
-    -fx-border-color: derive(#e2e8e4, 10%);
-    -fx-border-width: 0px;
+    -fx-border-color: derive(#002c54, 10%);
+    -fx-border-width: 0 0 5 0;
 }
 
 .status-bar {
@@ -524,7 +658,7 @@ public class FloatingTaskListPanel extends UiPart<Region> {
 }
 
 .command-box-text {
-    -fx-background-color: #ffccbb;
+    -fx-background-color: white;
 }
 
 /*
@@ -607,7 +741,7 @@ public class FloatingTaskListPanel extends UiPart<Region> {
 }
 
 .scroll-bar .increment-button, .scroll-bar .decrement-button {
-    -fx-background-color: transparent;
+    -fx-background-color: white;
     -fx-padding: 0 0 0 0;
 }
 
@@ -658,36 +792,97 @@ public class FloatingTaskListPanel extends UiPart<Region> {
 ```
 ###### /resources/view/EventListPanel.fxml
 ``` fxml
+
+<?import javafx.scene.text.*?>
+<?import java.lang.*?>
+<?import java.net.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.*?>
 <?import java.net.URL?>
-<VBox xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
+
+<VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     <stylesheets>
-        <URL value="@DarkTheme.css"/>
-        <URL value="@Extensions.css"/>
+        <URL value="@DarkTheme.css" />
+        <URL value="@Extensions.css" />
     </stylesheets>
     <children>
-        <ListView fx:id="eventListView" VBox.vgrow="ALWAYS" Style="-fx-background-color:#6eb5c0"/>
+      <HBox prefHeight="20.0" prefWidth="200.0">
+         <children>
+            <TextField alignment="CENTER" editable="false" prefHeight="36.0" prefWidth="340.0" styleClass="text-header" text="EVENT" HBox.hgrow="ALWAYS">
+            </TextField>
+         </children>
+      </HBox>
+      <ListView fx:id="eventListView" Style="-fx-background-color:#6eb5c0" prefWidth="340.0" VBox.vgrow="ALWAYS" />
     </children>
 </VBox>
+```
+###### /resources/view/Extensions.css
+``` css
+.error {
+    -fx-background-color: red;
+}
+
+.success {
+    -fx-background-color: #93DB70;
+}
+
+.tag-selector {
+    -fx-border-width: 1;
+    -fx-border-color: white;
+    -fx-border-radius: 3;
+    -fx-background-radius: 3;
+}
+
+.tooltip-text {
+    -fx-text-fill: white;
+}
 ```
 ###### /resources/view/FloatingTaskListPanel.fxml
 ``` fxml
+
+<?import java.lang.*?>
+<?import java.net.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.*?>
 <?import java.net.URL?>
-<VBox xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
+
+<VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     <stylesheets>
-        <URL value="@DarkTheme.css"/>
-        <URL value="@Extensions.css"/>
+        <URL value="@DarkTheme.css" />
+        <URL value="@Extensions.css" />
     </stylesheets>
     <children>
-        <ListView fx:id="floatingTaskListView" VBox.vgrow="ALWAYS" Style="-fx-background-color:#ff9966"/>
+       <HBox prefHeight="20.0" prefWidth="200.0">
+         <children>
+            <TextField alignment="CENTER" editable="false" prefHeight="36.0" prefWidth="340.0" styleClass="text-header" text="ANYTIME" HBox.hgrow="ALWAYS">
+            </TextField>
+         </children>
+      </HBox>
+        <ListView fx:id="floatingTaskListView" Style="-fx-background-color:#ff9966" prefWidth="340.0" VBox.vgrow="ALWAYS" />
     </children>
 </VBox>
 ```
+###### /resources/view/HelpWindow.fxml
+``` fxml
+
+<AnchorPane fx:id="helpWindowRoot" styleClass="pane" stylesheets="@HelpWindow.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <TableView fx:id="commandTable" styleClass="pane" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="48.0">
+        <columns>
+          <TableColumn fx:id="commandColumn" text="Command" />
+          <TableColumn fx:id="parameterColumn" text="Parameter" />
+          <TableColumn fx:id="resultColumn" text="Result" />
+          <TableColumn fx:id="exampleColumn" text="Example" />
+        </columns>
+      </TableView>
+   </children>
+</AnchorPane>
+```
 ###### /resources/view/MainWindow.fxml
 ``` fxml
+
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 <?import java.lang.*?>
@@ -719,37 +914,6 @@ public class FloatingTaskListPanel extends UiPart<Region> {
             </Menu>
          </menus>
       </MenuBar>
-       <SplitPane id="splitPane" fx:id="header" dividerPositions="0.4, 0.5" maxHeight="30.0" VBox.vgrow="ALWAYS">
-         <padding>
-            <Insets bottom="0.0" left="10.0" right="10.0" top="0.0" />
-         </padding>
-         <items>
-             <VBox minWidth="340" prefWidth="340">
-                <padding>
-                    <Insets bottom="0.0" left="0.0" right="0.0" top="10.0" />
-                </padding>
-               <children>
-                  <Label alignment="CENTER" minWidth="340" prefHeight="20.0" prefWidth="340" styleClass="label-header" text="DEADLINE" />
-               </children>
-            </VBox>
-             <VBox minWidth="340" prefWidth="340">
-                <padding>
-                    <Insets bottom="0.0" left="0.0" right="0.0" top="10.0" />
-                </padding>
-               <children>
-                   <Label alignment="CENTER" minWidth="340" prefHeight="20.0" prefWidth="340" styleClass="label-header" text="EVENT" />
-               </children>
-            </VBox>
-             <VBox minWidth="340" prefWidth="340">
-                <padding>
-                    <Insets bottom="0.0" left="0.0" right="0.0" top="10.0" />
-                </padding>
-               <children>
-                  <Label alignment="CENTER" minWidth="340" prefHeight="20.0" prefWidth="340" styleClass="label-header" text="ANYTIME" />
-               </children>
-            </VBox>
-         </items>
-      </SplitPane>
       <SplitPane id="splitPane" fx:id="splitPane" dividerPositions="0.4, 0.5" VBox.vgrow="ALWAYS">
        <padding>
              <Insets bottom="0.0" left="10.0" right="10.0" top="0.0" />
@@ -786,7 +950,7 @@ public class FloatingTaskListPanel extends UiPart<Region> {
                <Insets bottom="0.0" left="0.0" right="0.0" top="0.0" />
            </padding>
        </AnchorPane>
-             <AnchorPane fx:id="commandBoxPlaceholder" styleClass="anchor-pane-with-border" VBox.vgrow="NEVER">
+             <AnchorPane fx:id="commandBoxPlaceholder" styleClass="anchor-pane" VBox.vgrow="NEVER">
          <padding>
             <Insets bottom="0.0" left="0.0" right="0.0" top="0.0" />
          </padding>
@@ -858,7 +1022,7 @@ public class FloatingTaskListPanel extends UiPart<Region> {
                                              <Label fx:id="name" styleClass="cell_big_label" text="\$first" />
                                          </children>
                                       </HBox>
-                                    <Label fx:id="description" minWidth="180.0" prefHeight="30.0" styleClass="cell_small_label" text="\$description" />
+                                    <ImageView fx:id="descriptionSign" fitHeight="20.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true"/>
                                     <FlowPane fx:id="tags" maxHeight="20.0" minWidth="180.0" />
                                 </children>
                             </VBox>
@@ -895,16 +1059,27 @@ public class FloatingTaskListPanel extends UiPart<Region> {
 ```
 ###### /resources/view/TaskListPanel.fxml
 ``` fxml
+
+<?import java.lang.*?>
+<?import java.net.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.*?>
 <?import java.net.URL?>
-<VBox xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
+
+<VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     <stylesheets>
-        <URL value="@DarkTheme.css"/>
-        <URL value="@Extensions.css"/>
+        <URL value="@DarkTheme.css" />
+        <URL value="@Extensions.css" />
     </stylesheets>
     <children>
-        <ListView fx:id="taskListView" VBox.vgrow="ALWAYS" Style="-fx-background-color: #002c54"/>
+       <HBox prefHeight="20.0" prefWidth="200.0">
+         <children>
+            <TextField alignment="CENTER" editable="false" prefHeight="36.0" prefWidth="340.0" styleClass="text-header" text="DEADLINE" HBox.hgrow="ALWAYS">
+            </TextField>
+         </children>
+      </HBox>
+        <ListView fx:id="taskListView" Style="-fx-background-color: #002c54" prefWidth="340.0" VBox.vgrow="ALWAYS" />
     </children>
 </VBox>
 ```
