--- a/collated/test/A0146809W.md
+++ b/collated/test/A0146809W.md
@@ -36,6 +36,254 @@ public class ClearCommandTest extends TaskManagerGuiTest {
     }
 }
 ```
+###### /java/guitests/DeleteCommandTest.java
+``` java
+
+        //delete from outside list
+        commandBox.runCommand("delete " + (currentList.length + 1));
+        assertResultMessage(Messages.MESSAGE_INVALID_TASK_DISPLAYED_INDEX);
+
+        //invalid format
+        commandBox.runCommand("delete " + "1-");
+        assertResultMessage(String.format(MESSAGE_INVALID_COMMAND_FORMAT, DeleteCommand.MESSAGE_USAGE));
+
+        //delete from outside range
+        commandBox.runCommand("delete 1-" + (currentList.length + 1));
+        assertResultMessage(Messages.MESSAGE_INVALID_TASK_DISPLAYED_INDEX);
+    }
+
+
+    /**
+     * Runs the delete command to delete the task at specified index and confirms the result is correct.
+     *
+     * @param targetIndexOneIndexed e.g. index 1 to delete the first task in the list,
+     * @param currentList           A copy of the current list of tasks (before deletion).
+     */
+    private void assertDeleteSuccess(int targetIndexOneIndexed, final TestTask[] currentList) {
+        TestTask taskToDelete = currentList[targetIndexOneIndexed - 1]; // -1 as array uses zero indexing
+        TestUtil.sortTasks(currentList);
+        TestTask[] expectedRemainder = TestUtil.removeTaskFromList(currentList, targetIndexOneIndexed);
+
+        this.commandBox.runCommand("delete " + targetIndexOneIndexed);
+
+        //confirm the list now contains all previous tasks except the deleted task
+        assertAllPanelsMatch(expectedRemainder);
+
+        HashSet<ReadOnlyTask> tasksToDelete = new HashSet<>();
+        tasksToDelete.add(taskToDelete);
+
+        //confirm the result message is correct
+        assertResultMessage(String.format(MESSAGE_DELETE_TASK_SUCCESS, tasksToString(tasksToDelete)));
+    }
+```
+###### /java/guitests/RedoCommandTest.java
+``` java
+    @Test
+    public void redo_clear_success_ControlY() throws Exception {
+        this.commandBox.runCommand(MESSAGE_TEST_CLEAR_COMMAND);
+        executeUndoThenCtrlY();
+        assertClearCommandSuccess();
+    }
+
+```
+###### /java/guitests/RedoCommandTest.java
+``` java
+    private void executeUndoThenCtrlY() {
+        this.commandBox.runCommand(MESSAGE_TEST_UNDO_COMMAND);
+        this.mainMenu.useCTRLYAccelerator();
+    }
+
+```
+###### /java/guitests/UndoCommandTest.java
+``` java
+    @Test
+    public void undo_clear_success_ControlZ() throws Exception {
+        this.commandBox.runCommand(MESSAGE_TEST_CLEAR_COMMAND);
+        this.mainMenu.useCTRLZAccelerator();
+        assertUndoSuccess();
+    }
+
+```
+###### /java/seedu/doit/commons/core/CommandSettingTest.java
+``` java
+package seedu.doit.commons.core;
+
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertTrue;
+
+import org.junit.Test;
+
+import seedu.doit.logic.commands.exceptions.CommandExistedException;
+import seedu.doit.logic.commands.exceptions.NoSuchCommandException;
+
+public class CommandSettingTest {
+
+    public static final String MESSAGE_ADD_COMMAND = "add";
+    public static final String MESSAGE_CLEAR_COMMAND = "clear";
+    public static final String MESSAGE_DELETE_COMMAND = "delete";
+    public static final String MESSAGE_DONE_COMMAND = "done";
+    public static final String MESSAGE_EDIT_COMMAND = "edit";
+    public static final String MESSAGE_EXIT_COMMAND = "exit";
+    public static final String MESSAGE_FIND_COMMAND = "find";
+    public static final String MESSAGE_HELP_COMMAND = "help";
+    public static final String MESSAGE_LIST_COMMAND = "list";
+    public static final String MESSAGE_LOAD_COMMAND = "load";
+    public static final String MESSAGE_MARK_COMMAND = "mark";
+    public static final String MESSAGE_REDO_COMMAND = "redo";
+    public static final String MESSAGE_SAVE_COMMAND = "save";
+    public static final String MESSAGE_SELECT_COMMAND = "select";
+    public static final String MESSAGE_SET_COMMAND = "set";
+    public static final String MESSAGE_SORT_COMMAND = "sort";
+    public static final String MESSAGE_UNDO_COMMAND = "undo";
+    public static final String MESSAGE_UNMARK_COMMAND = "unmark";
+    public static final String MESSAGE_TEST_SET_CHANGED = "changed";
+
+    CommandSettings originalSettings = new CommandSettings();
+
+    @Test
+    public void equals_settings_true() {
+        CommandSettings testSettings = new CommandSettings();
+        assertTrue(this.originalSettings.equals(testSettings));
+    }
+
+    @Test
+    public void equals_null_false() {
+        assertFalse(this.originalSettings.equals(null));
+    }
+
+    @Test
+    public void equals_notCommandSetting_false() {
+        assertFalse(this.originalSettings.equals(new Object()));
+    }
+
+    @Test
+    public void equals_add() throws NoSuchCommandException, CommandExistedException {
+        CommandSettings changedSettings = new CommandSettings();
+        changedSettings.setCommand(MESSAGE_ADD_COMMAND, MESSAGE_TEST_SET_CHANGED);
+        assertFalse(this.originalSettings.equals(changedSettings));
+    }
+
+    @Test
+    public void equals_clear() throws NoSuchCommandException, CommandExistedException {
+        CommandSettings changedSettings = new CommandSettings();
+        changedSettings.setCommand(MESSAGE_CLEAR_COMMAND, MESSAGE_TEST_SET_CHANGED);
+        assertFalse(this.originalSettings.equals(changedSettings));
+    }
+
+    @Test
+    public void equals_delete() throws NoSuchCommandException, CommandExistedException {
+        CommandSettings changedSettings = new CommandSettings();
+        changedSettings.setCommand(MESSAGE_DELETE_COMMAND, MESSAGE_TEST_SET_CHANGED);
+        assertFalse(this.originalSettings.equals(changedSettings));
+    }
+
+    @Test
+    public void equals_done() throws NoSuchCommandException, CommandExistedException {
+        CommandSettings changedSettings = new CommandSettings();
+        changedSettings.setCommand(MESSAGE_DONE_COMMAND, MESSAGE_TEST_SET_CHANGED);
+        assertFalse(this.originalSettings.equals(changedSettings));
+    }
+
+    @Test
+    public void equals_edit() throws NoSuchCommandException, CommandExistedException {
+        CommandSettings changedSettings = new CommandSettings();
+        changedSettings.setCommand(MESSAGE_EDIT_COMMAND, MESSAGE_TEST_SET_CHANGED);
+        assertFalse(this.originalSettings.equals(changedSettings));
+    }
+
+    @Test
+    public void equals_exit() throws NoSuchCommandException, CommandExistedException {
+        CommandSettings changedSettings = new CommandSettings();
+        changedSettings.setCommand(MESSAGE_EXIT_COMMAND, MESSAGE_TEST_SET_CHANGED);
+        assertFalse(this.originalSettings.equals(changedSettings));
+    }
+
+    @Test
+    public void equals_find() throws NoSuchCommandException, CommandExistedException {
+        CommandSettings changedSettings = new CommandSettings();
+        changedSettings.setCommand(MESSAGE_FIND_COMMAND, MESSAGE_TEST_SET_CHANGED);
+        assertFalse(this.originalSettings.equals(changedSettings));
+    }
+
+    @Test
+    public void equals_help() throws NoSuchCommandException, CommandExistedException {
+        CommandSettings changedSettings = new CommandSettings();
+        changedSettings.setCommand(MESSAGE_HELP_COMMAND, MESSAGE_TEST_SET_CHANGED);
+        assertFalse(this.originalSettings.equals(changedSettings));
+    }
+
+    @Test
+    public void equals_list() throws NoSuchCommandException, CommandExistedException {
+        CommandSettings changedSettings = new CommandSettings();
+        changedSettings.setCommand(MESSAGE_LIST_COMMAND, MESSAGE_TEST_SET_CHANGED);
+        assertFalse(this.originalSettings.equals(changedSettings));
+    }
+
+    @Test
+    public void equals_load() throws NoSuchCommandException, CommandExistedException {
+        CommandSettings changedSettings = new CommandSettings();
+        changedSettings.setCommand(MESSAGE_LOAD_COMMAND, MESSAGE_TEST_SET_CHANGED);
+        assertFalse(this.originalSettings.equals(changedSettings));
+    }
+
+    @Test
+    public void equals_mark() throws NoSuchCommandException, CommandExistedException {
+        CommandSettings changedSettings = new CommandSettings();
+        changedSettings.setCommand(MESSAGE_MARK_COMMAND, MESSAGE_TEST_SET_CHANGED);
+        assertFalse(this.originalSettings.equals(changedSettings));
+    }
+
+    @Test
+    public void equals_redo() throws NoSuchCommandException, CommandExistedException {
+        CommandSettings changedSettings = new CommandSettings();
+        changedSettings.setCommand(MESSAGE_REDO_COMMAND, MESSAGE_TEST_SET_CHANGED);
+        assertFalse(this.originalSettings.equals(changedSettings));
+    }
+
+    @Test
+    public void equals_save() throws NoSuchCommandException, CommandExistedException {
+        CommandSettings changedSettings = new CommandSettings();
+        changedSettings.setCommand(MESSAGE_SAVE_COMMAND, MESSAGE_TEST_SET_CHANGED);
+        assertFalse(this.originalSettings.equals(changedSettings));
+    }
+
+    @Test
+    public void equals_select() throws NoSuchCommandException, CommandExistedException {
+        CommandSettings changedSettings = new CommandSettings();
+        changedSettings.setCommand(MESSAGE_SELECT_COMMAND, MESSAGE_TEST_SET_CHANGED);
+        assertFalse(this.originalSettings.equals(changedSettings));
+    }
+
+    @Test
+    public void equals_set() throws NoSuchCommandException, CommandExistedException {
+        CommandSettings changedSettings = new CommandSettings();
+        changedSettings.setCommand(MESSAGE_SET_COMMAND, MESSAGE_TEST_SET_CHANGED);
+        assertFalse(this.originalSettings.equals(changedSettings));
+    }
+
+    @Test
+    public void equals_sort() throws NoSuchCommandException, CommandExistedException {
+        CommandSettings changedSettings = new CommandSettings();
+        changedSettings.setCommand(MESSAGE_SORT_COMMAND, MESSAGE_TEST_SET_CHANGED);
+        assertFalse(this.originalSettings.equals(changedSettings));
+    }
+
+    @Test
+    public void equals_undo() throws NoSuchCommandException, CommandExistedException {
+        CommandSettings changedSettings = new CommandSettings();
+        changedSettings.setCommand(MESSAGE_UNDO_COMMAND, MESSAGE_TEST_SET_CHANGED);
+        assertFalse(this.originalSettings.equals(changedSettings));
+    }
+
+    @Test
+    public void equals_unmark() throws NoSuchCommandException, CommandExistedException {
+        CommandSettings changedSettings = new CommandSettings();
+        changedSettings.setCommand(MESSAGE_UNMARK_COMMAND, MESSAGE_TEST_SET_CHANGED);
+        assertFalse(this.originalSettings.equals(changedSettings));
+    }
+
+}
+```
 ###### /java/seedu/doit/logic/DateTimeParserTest.java
 ``` java
 package seedu.doit.logic;
@@ -50,7 +298,9 @@ import org.junit.Rule;
 import org.junit.Test;
 import org.junit.rules.ExpectedException;
 
+import seedu.doit.commons.exceptions.IllegalValueException;
 import seedu.doit.logic.parser.DateTimeParser;
+
 /**
  * Tests if DateTimeParser is parsing the date correctly
  **/
@@ -59,6 +309,7 @@ public class DateTimeParserTest {
 
     @Rule
     public ExpectedException thrown = ExpectedException.none();
+
     private void assertSameDate(LocalDateTime time1, LocalDateTime time2) {
         LocalDateTime diff = time1.minusHours(time2.getHour()).minusMinutes(time2.getMinute())
             .minusSeconds(time2.getSecond());
@@ -67,30 +318,283 @@ public class DateTimeParserTest {
 
     @Test
     public void check_ifDateParsedCorrectly() throws Exception {
-        Optional<LocalDateTime> t = DateTimeParser.parseDateTime("03/20/17");
+        Optional<LocalDateTime> t = DateTimeParser.parseDateTime("20/3/17");
         assertSameDate(t.get(), LocalDateTime.of(2017, 3, 20, 0, 0));
     }
 
     @Test
-    public void parseEmptyString() {
+    public void parse_EmptyString() throws Exception {
         Optional<LocalDateTime> dateParsed = DateTimeParser.parseDateTime("");
         assertFalse(dateParsed.isPresent());
     }
 
     @Test
-    public void parseNullString() throws Exception {
+    public void parse_NullString() throws Exception {
         thrown.expect(NullPointerException.class);
         DateTimeParser.parseDateTime(null);
     }
 
     @Test
-    public void parseRubbishString() {
+    public void parse_RubbishString() throws Exception {
         Optional<LocalDateTime> dateParsed = DateTimeParser.parseDateTime("jsadf");
         assertFalse(dateParsed.isPresent());
     }
 
+    @Test
+    public void parse_InvalidInputString() throws Exception {
+        thrown.expect(IllegalValueException.class);
+        Optional<LocalDateTime> dateParsed = DateTimeParser.parseDateTime("1111111111");
+    }
+
+    @Test
+    public void parse_MoreThanOneValidInputString() throws Exception {
+        thrown.expect(IllegalValueException.class);
+        Optional<LocalDateTime> dateParsed = DateTimeParser.parseDateTime("today tomorrow friday");
+    }
 
 
+}
+```
+###### /java/seedu/doit/logic/LogicManagerTest.java
+``` java
+    @Test
+    public void execute_add_invalidArgsFormat() {
+        String expectedMessage = String.format(MESSAGE_INVALID_COMMAND_FORMAT, AddCommand.MESSAGE_USAGE);
+        assertCommandFailure("add d/valid", expectedMessage);
+        assertCommandFailure("add e/valid", expectedMessage);
+        assertCommandFailure("add Valid Task p/1", MESSAGE_PRIORITY_CONSTRAINTS);
+        assertCommandFailure("add Valid Task e/invalid time", MESSAGE_ENDTIME_CONSTRAINTS);
+        assertCommandFailure("add Valid Task s/invalid e/tomorrow ", MESSAGE_STARTTIME_CONSTRAINTS);
+        assertCommandFailure("add Valid Name e/gogo ", MESSAGE_ENDTIME_CONSTRAINTS);
+    }
+```
+###### /java/seedu/doit/logic/LogicManagerTest.java
+``` java
+    @Test
+    public void execute_delete_removesCorrectTask() throws Exception {
+        TestDataHelper helper = new TestDataHelper();
+        List<Task> threeTasks = helper.generateTaskList(3);
+
+        TaskManager expectedTM = helper.generateTaskManager(threeTasks);
+        expectedTM.removeTask(threeTasks.get(1));
+        helper.addToModel(this.model, threeTasks);
+
+        HashSet<ReadOnlyTask> tasksToDelete = new HashSet<>();
+        tasksToDelete.add(threeTasks.get(1));
+
+        String resultMessage = String.format(MESSAGE_DELETE_TASK_SUCCESS, tasksToString(tasksToDelete));
+
+        assertCommandSuccess("delete 2", resultMessage, expectedTM, expectedTM.getTaskList());
+    }
+
+    @Test
+    public void execute_delete_removesValidRangeOfTasks() throws Exception {
+        TestDataHelper helper = new TestDataHelper();
+        List<Task> fourTasks = helper.generateTaskList(4);
+
+        TaskManager expectedTM = helper.generateTaskManager(fourTasks);
+        expectedTM.removeTask(fourTasks.get(0));
+        expectedTM.removeTask(fourTasks.get(1));
+        expectedTM.removeTask(fourTasks.get(2));
+        expectedTM.removeTask(fourTasks.get(3));
+
+        helper.addToModel(this.model, fourTasks);
+
+        HashSet<ReadOnlyTask> deletedTasks = helper.generateTaskSet(fourTasks.get(0), fourTasks.get(1),
+            fourTasks.get(2), fourTasks.get(3));
+        String tasksAsString = CommandResult.tasksToString(deletedTasks);
+
+        // Delete all tasks ranging from 1 to 4
+        // Then checks if the task manager have no tasks left
+        assertCommandBehavior(false, "delete 1-4",
+                String.format(DeleteCommand.MESSAGE_DELETE_TASK_SUCCESS, tasksAsString), expectedTM,
+                expectedTM.getTaskList());
+    }
+
+    @Test
+    public void execute_delete_removesMultipleTasksNotInOrder() throws Exception {
+        TestDataHelper helper = new TestDataHelper();
+        List<Task> fourTasks = helper.generateTaskList(5);
+
+        TaskManager expectedTM = helper.generateTaskManager(fourTasks);
+        expectedTM.removeTask(fourTasks.get(0));
+        expectedTM.removeTask(fourTasks.get(3));
+
+        helper.addToModel(this.model, fourTasks);
+
+        HashSet<ReadOnlyTask> deletedTasks = helper.generateTaskSet(fourTasks.get(0), fourTasks.get(3));
+        String tasksAsString = CommandResult.tasksToString(deletedTasks);
+
+        // Delete tasks 1 and 4
+        // Then checks if the task manager have no tasks left
+        assertCommandBehavior(false, "delete 1 4",
+                String.format(DeleteCommand.MESSAGE_DELETE_TASK_SUCCESS, tasksAsString), expectedTM,
+                expectedTM.getTaskList());
+    }
+
+    @Test
+    public void execute_find_invalidArgsFormat() {
+        String expectedMessage = String.format(MESSAGE_INVALID_COMMAND_FORMAT, FindCommand.MESSAGE_USAGE);
+        assertCommandFailure("find ", expectedMessage);
+    }
+
+    @Test
+    public void execute_find_onlyMatchesFullWordsInNames() throws Exception {
+        TestDataHelper helper = new TestDataHelper();
+        Task pTarget1 = helper.generateTaskWithName("bla bla KEY bla");
+        Task pTarget2 = helper.generateTaskWithName("bla KEY bla bceofeia");
+        Task p1 = helper.generateTaskWithName("KE Y");
+        Task p2 = helper.generateTaskWithName("KEYKEYKEY sduauo");
+
+        List<Task> fourTasks = helper.generateTaskList(p1, pTarget1, p2, pTarget2);
+        Collections.sort(fourTasks, new TaskNameComparator());
+        TaskManager expectedTM = helper.generateTaskManager(fourTasks);
+        List<Task> expectedList = helper.generateTaskList(pTarget1, pTarget2);
+        Collections.sort(expectedList, new TaskNameComparator());
+        helper.addToModel(this.model, fourTasks);
+
+        assertCommandSuccess("find n/KEY", Command.getMessageForTaskListShownSummary(expectedList.size()), expectedTM,
+                expectedList);
+    }
+
+    @Test
+    public void execute_find_isNotCaseSensitive() throws Exception {
+        TestDataHelper helper = new TestDataHelper();
+        Task p1 = helper.generateTaskWithName("bla bla KEY bla");
+        Task p2 = helper.generateTaskWithName("bla KEY bla bceofeia");
+        Task p3 = helper.generateTaskWithName("key key");
+        Task p4 = helper.generateTaskWithName("KEy sduauo");
+
+        List<Task> fourTasks = helper.generateTaskList(p3, p1, p4, p2);
+        Collections.sort(fourTasks, new TaskNameComparator());
+        TaskManager expectedTM = helper.generateTaskManager(fourTasks);
+        List<Task> expectedList = fourTasks;
+        helper.addToModel(this.model, fourTasks);
+
+        assertCommandSuccess("find n/KEY", Command.getMessageForTaskListShownSummary(expectedList.size()), expectedTM,
+                expectedList);
+    }
+
+    @Test
+    public void execute_find_matchesIfAnyKeywordPresent() throws Exception {
+        TestDataHelper helper = new TestDataHelper();
+        Task pTarget1 = helper.generateTaskWithName("bla bla KEY bla");
+        Task pTarget2 = helper.generateTaskWithName("key rAnDoM bla bceofeia");
+        Task pTarget3 = helper.generateTaskWithName("key key");
+        Task p1 = helper.generateTaskWithName("sduauo");
+
+        List<Task> fourTasks = helper.generateTaskList(pTarget1, p1, pTarget2, pTarget3);
+        TaskManager expectedTM = helper.generateTaskManager(fourTasks);
+        List<Task> expectedList = helper.generateTaskList(pTarget2);
+        helper.addToModel(this.model, fourTasks);
+
+        assertCommandSuccess("find n/key rAnDoM", Command.getMessageForTaskListShownSummary(expectedList.size()),
+                expectedTM, expectedList);
+    }
+```
+###### /java/seedu/doit/model/task/EndTimeTest.java
+``` java
+public class EndTimeTest {
+
+    @Rule
+    public ExpectedException thrown = ExpectedException.none();
+
+    @Test
+    public void isValidEndTime() {
+        // valid deadline
+        assertTrue(EndTime.isValidEndTime("20/03/17 10:21"));
+        assertTrue(EndTime.isValidEndTime("21/04/15 15:10"));
+        assertTrue(EndTime.isValidEndTime("01/05/16 14:34"));
+        assertTrue(EndTime.isValidEndTime("01/04/17 06:20"));
+        assertTrue(EndTime.isValidEndTime("25/03/12 04:55"));
+        assertTrue(EndTime.isValidEndTime("23/04/17 14:60"));
+        assertTrue(EndTime.isValidEndTime("21/02/17 19:20"));
+        assertTrue(EndTime.isValidEndTime("28/03/16 12:15"));
+    }
+
+    @Test
+    public void invalidDate_IllegalValueException() throws Exception {
+        thrown.expect(IllegalValueException.class);
+        EndTime one = new EndTime("asdf");
+    }
+}
+```
+###### /java/seedu/doit/model/task/NameTest.java
+``` java
+
+public class NameTest {
+
+    @Test
+    public void isValidName() {
+        // invalid name
+        assertFalse(Name.isValidName("")); // empty string
+        assertFalse(Name.isValidName(" ")); // spaces only
+        assertFalse(Name.isValidName("^")); // only non-alphanumeric characters
+        assertFalse(Name.isValidName("peter*")); // contains non-alphanumeric characters
+
+        // valid name
+        assertTrue(Name.isValidName("peter jack")); // alphabets only
+        assertTrue(Name.isValidName("12345")); // numbers only
+        assertTrue(Name.isValidName("peter the 2nd")); // alphanumeric characters
+        assertTrue(Name.isValidName("Capital Tan")); // with capital letters
+        assertTrue(Name.isValidName("David Roger Jackson Ray Jr 2nd")); // long names
+    }
+}
+```
+###### /java/seedu/doit/model/task/PriorityTest.java
+``` java
+
+public class PriorityTest {
+
+    @Test
+    public void isValidPriority() {
+        // invalid priority numbers
+        assertFalse(Priority.isValidPriority("")); // empty string
+        assertFalse(Priority.isValidPriority(" ")); // spaces only
+        assertFalse(Priority.isValidPriority("priority")); // non-numeric
+        assertFalse(Priority.isValidPriority("9011p041")); // alphabets within digits
+        assertFalse(Priority.isValidPriority("9312 1534")); // spaces within digits
+
+        // valid priority numbers
+        assertTrue(Priority.isValidPriority("low"));
+        assertTrue(Priority.isValidPriority("med"));
+        assertTrue(Priority.isValidPriority("high"));
+    }
+}
+```
+###### /java/seedu/doit/model/task/StartTimeTest.java
+``` java
+
+public class StartTimeTest {
+
+    @Rule
+    public ExpectedException thrown = ExpectedException.none();
+
+    @Test
+    public void isValid_StartTime() {
+        // valid startTime
+        assertTrue(StartTime.isValidStartTime("20/03/17 10:21"));
+        assertTrue(StartTime.isValidStartTime("21/04/15 15:10"));
+        assertTrue(StartTime.isValidStartTime("01/05/16 14:34"));
+        assertTrue(StartTime.isValidStartTime("01/04/17 06:20"));
+        assertTrue(StartTime.isValidStartTime("25/03/12 04:55"));
+        assertTrue(StartTime.isValidStartTime("23/04/17 14:60"));
+        assertTrue(StartTime.isValidStartTime("21/02/17 19:20"));
+        assertTrue(StartTime.isValidStartTime("28/03/16 12:15"));
+    }
+
+    @Test
+    public void isInvalid_StartTime() {
+        // invalid startTime
+        assertFalse(StartTime.isValidStartTime("99/09/16 10:21")); //date out of range
+        assertFalse(StartTime.isValidStartTime("09/99/16 10:21")); //month out of range
+    }
+
+    @Test
+    public void invalidStart_IllegalValueException() throws Exception {
+        thrown.expect(IllegalValueException.class);
+        StartTime one = new StartTime("asdf");
+    }
 }
 ```
 ###### /java/seedu/doit/testutil/TypicalTestTasks.java
@@ -110,10 +614,8 @@ public class TypicalTestTasks {
 
     public TypicalTestTasks() {
         try {
-            this.alice = new TaskBuilder().withName("Alice Pauline")
-                .withDescription("123, Jurong West Ave 6, #08-111").withDeadline("friday")
-                .withPriority("low")
-                .withTags("friends").build();
+            this.alice = new TaskBuilder().withName("Alice Pauline").withDescription("123, Jurong West Ave 6, #08-111")
+                    .withDeadline("friday").withPriority("low").withTags("friends").build();
             this.benson = new TaskBuilder().withName("Benson Meier").withDescription("311, Clementi Ave 2, #02-25")
                 .withDeadline("thursday").withPriority("med")
                 .withTags("owesMoney", "friends").build();
@@ -126,7 +628,7 @@ public class TypicalTestTasks {
             this.fiona = new TaskBuilder().withName("Fiona Kunz").withPriority("med")
                 .withDeadline("sunday").withDescription("little tokyo").build();
             this.george = new TaskBuilder().withName("George Best").withPriority("high")
-                .withDeadline("3/20/17").withDescription("4th street").build();
+                .withDeadline("20/03/17").withDescription("4th street").build();
             this.aF = new TaskBuilder().withName("AAAAAFloating").withPriority("med")
                  .withDescription("l").build();
             this.bF = new TaskBuilder().withName("BBBBBFloating").withPriority("med")
@@ -134,14 +636,14 @@ public class TypicalTestTasks {
             this.cF = new TaskBuilder().withName("CCCCCFloating").withPriority("med")
                  .withDescription("l").build();
             this.aE = new TaskBuilder().withName("AAAAAEvent").withPriority("med")
-                    .withDeadline("3/20/17").withStartTime("3/19/17").withDescription("l").build();
+                    .withDeadline("20/03/17").withStartTime("19/03/17").withDescription("l").build();
             this.bE = new TaskBuilder().withName("BBBBBEvent").withPriority("med")
-                    .withDeadline("3/20/17").withStartTime("3/19/17").withDescription("l").build();
+                    .withDeadline("20/03/17").withStartTime("19/03/17").withDescription("l").build();
             this.cE = new TaskBuilder().withName("CCCCCEvent").withPriority("med")
-                    .withDeadline("3/20/17").withStartTime("3/19/17").withDescription("l").build();
+                    .withDeadline("20/03/17").withStartTime("19/03/17").withDescription("l").build();
             // Manually added
             this.hoon = new TaskBuilder().withName("Hoon Meier").withPriority("low")
-                .withDeadline("3/14/18").withDescription("little india").build();
+                .withDeadline("14/03/18").withDescription("little india").build();
             this.ida = new TaskBuilder().withName("Ida Mueller").withPriority("med")
                 .withDeadline("04/04/17").withDescription("chicago ave").build();
         } catch (IllegalValueException e) {
@@ -161,34 +663,34 @@ public class TypicalTestTasks {
     }
 
     public TestTask[] getTypicalTasks() {
-        return new TestTask[] {this.alice, this.benson, this.carl, this.daniel,
-            this.elle, this.fiona, this.george, this.aE, this.bE, this.cE, this.aF, this.bF, this.cF};
+        return new TestTask[] { this.alice, this.benson, this.carl, this.daniel, this.elle, this.fiona, this.george,
+            this.aE, this.bE, this.cE, this.aF, this.bF, this.cF };
     }
 
     public static TestTask getEventTestTask() throws IllegalValueException {
-        return new TaskBuilder().withName("meeting")
-                                     .withStartTime("yesterday")
-                                     .withDescription("event")
-                                     .withPriority("high")
-                                     .withDeadline("tomorrow")
-                                     .withTags("tttttttttag").build();
+        return new TaskBuilder().withName("meeting").withStartTime("yesterday").withDescription("event")
+                .withPriority("high").withDeadline("tomorrow").withTags("tttttttttag").build();
     }
 
     public static TestTask getDeadlineTestTask() throws IllegalValueException {
-        return new TaskBuilder().withName("due soon")
-                                        .withDescription("task")
-                                        .withPriority("high")
-                                        .withDeadline("tomorrow")
-                                        .withTags("tttttttttag").build();
+        return new TaskBuilder().withName("due soon").withDescription("task").withPriority("high")
+                .withDeadline("tomorrow").withTags("tttttttttag").build();
     }
 
     public static TestTask getFloatingTestTask() throws IllegalValueException {
-        return new TaskBuilder().withName("anytime")
-                                        .withDescription("fTask")
-                                        .withPriority("high")
-                                        .withTags("tttttttttag").build();
+        return new TaskBuilder().withName("anytime").withDescription("fTask").withPriority("high")
+                .withTags("tttttttttag").build();
     }
 
+    public static TestTask getDeadlineTestTaskWithNoDescription() throws IllegalValueException {
+        return new TaskBuilder().withName("noDescription").withDescription("").withPriority("high")
+                .withDeadline("next week").withTags("tagme").build();
+    }
+
+    public static TestTask getFloatingTestTaskWithDuplicateTags() throws IllegalValueException {
+        return new TaskBuilder().withName("Duplicate tag").withDescription("duplicate tag success").withPriority("med")
+                .withTags("same").withTags("same").build();
+    }
 
     public TaskManager getTypicalTaskManager() {
         TaskManager ab = new TaskManager();
